--- a/cmark-gfm/PKGBUILD
+++ b/cmark-gfm/PKGBUILD
@@ -1,26 +1,33 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
 # Contributor: Veeti Paananen <veeti.paananen@rojekti.fi>
 
 pkgname=cmark-gfm
-pkgver=0.29.0.gfm.0
+pkgver=0.29.0.gfm.2
 pkgrel=2
 pkgdesc="GitHub's fork of cmark, a CommonMark parsing and rendering library and program in C"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/github/cmark"
 license=('custom:BSD2')
 depends=('glibc')
 makedepends=('cmake' 'python')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/github/cmark/archive/$pkgver.tar.gz")
-sha512sums=('54e396e035a43e4d0c86fa7f1c48a6a1283c0caaabdbc56dfcecee92e89e69f6d2e016ae2d9cf4f40258a6455fba7b813c1c6e6d37e53d33a381088ccbc5673e')
+source=("$url/archive/$pkgver/$pkgname-$pkgver.tar.gz"
+        remove-broken-include-on-config-h.patch::https://github.com/github/cmark-gfm/pull/248.patch)
+sha512sums=('4623989cc34c3d9c9596e27a8253d2ab26ecf0cbe8c2a6d802ab543c0310b90abae53364326ab8d5599d38a8cca001cf39931081bbc96c01f52283ff1cca1994'
+            '90726e254268cdcbd80dc3e7e5aee6ced7a13785eb16aa585413bd279079d40c790d631e3bff1c073468d0aa822157cbbbc15f60af9c466c5451c2e1fd31092b')
 
 prepare() {
   mkdir -p build
+  patch -d cmark-gfm-$pkgver -Np1 < remove-broken-include-on-config-h.patch
 }
 
 build() {
   cd build
-  cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_LIBDIR=/usr/lib ../cmark-gfm-$pkgver
+  cmake \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_INSTALL_LIBDIR=/usr/lib \
+    ../cmark-gfm-$pkgver
   make
 }
 
@@ -32,6 +39,5 @@ check() {
 package() {
   cd build
   make install DESTDIR="$pkgdir"
-
-  install -D -m 644 "$srcdir"/cmark-gfm-$pkgver/COPYING "$pkgdir"/usr/share/licenses/$pkgname/COPYING
+  install -Dm0644 -t "$pkgdir"/usr/share/licenses/$pkgname/ "$srcdir"/cmark-gfm-$pkgver/COPYING
 }
