* update various ruby gems

--- a/ruby/ruby-rdoc/PKGBUILD
+++ b/ruby/ruby-rdoc/PKGBUILD
@@ -1,19 +1,20 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Anatol Pomozov <anatol.pomozov@gmail.com>
+# Contributor: Andreas 'Segaja' Schleifer <segaja at archlinux dot org>
 
 _gemname=rdoc
 pkgname=ruby-$_gemname
-pkgver=6.3.1
-pkgrel=1
+pkgver=6.4.0
+pkgrel=2
 pkgdesc='Command-line documentation generator for Ruby projects'
 arch=(any)
 url='https://ruby.github.io/rdoc/'
 license=(MIT)
-depends=(ruby)
+depends=(ruby ruby-psych)
 options=(!emptydirs)
 source=(https://rubygems.org/downloads/$_gemname-$pkgver.gem)
 noextract=($_gemname-$pkgver.gem)
-sha1sums=('f5ff4a29930d158134624c48b28c29cd40e6e7c5')
+sha1sums=('a6e641cb08f8696b323975078eec614812aa2eb5')
 
 package() {
   local _gemdir="$(ruby -e'puts Gem.default_dir')"
