--- a/bind/PKGBUILD
+++ b/bind/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: judd <jvinet@zeroflux.org>
 # Contributor: Mario Vazquez <mario_vazq@hotmail.com>
 
-_pkgver=9.16.25
+_pkgver=9.18.1
 pkgname=bind
 pkgver=${_pkgver//-/.}
 pkgrel=1
@@ -18,7 +18,7 @@ makedepends=('libcap' 'libxml2' 'zlib' 'krb5' 'e2fsprogs' 'openssl' 'readline'
   'xz' 'libmaxminddb' 'libnsl' 'libuv' 'python-sphinx')
 depends=('bash' 'dnssec-anchors' 'e2fsprogs' 'glibc' 'icu' 'libedit' 'json-c'
   'krb5' 'libcap' 'libidn2' 'libmaxminddb' 'libnsl' 'libuv' 'libxml2' 'lmdb'
-  'openssl' 'python' 'python-ply' 'readline' 'xz' 'zlib')
+  'openssl' 'python' 'python-ply' 'readline' 'xz' 'zlib' 'jemalloc')
 conflicts=('bind-tools' 'dnsutils')
 replaces=('bind-tools' 'dnsutils' 'host')
 provides=('bind-tools' 'dnsutils' 'dns-server')
@@ -36,7 +36,7 @@ source=("https://ftp.isc.org/isc/bind9/${_pkgver}/bind-${_pkgver}.tar.xz"{,.asc}
         'localhost.zone'
         'localhost.ip6.zone'
         '127.0.0.zone')
-sha256sums=('9fa328850f82843ef8b7bf1ff5322cb68b110273a33f375ba41f35270f5e1ff3'
+sha256sums=('57c7afd871694d615cb4defb1c1bd6ed023350943d7458414db8d493ef560427'
             'SKIP'
             'f0423c4ee8495da487e07e9144bec1d25f46a0cd2dfa7cfd7a761ef15bfefc98'
             '7c0acefcfcc3ae093550caed7ec90fe84bec8f7477459ffa7e71dda76bcbdb2c'
@@ -67,7 +67,6 @@ build() {
   # compile with gcc10, https://gcc.gnu.org/gcc-10/porting_to.html
   CFLAGS+=' -fcommon'
   ./configure \
-    --build=${CHOST} \
     --prefix=/usr \
     --sysconfdir=/etc \
     --sbindir=/usr/bin \
@@ -75,15 +74,12 @@ build() {
     --disable-static \
     --enable-fixed-rrset \
     --enable-full-report \
-    --enable-dnsrps \
-    --with-python=/usr/bin/python \
     --with-maxminddb \
     --with-openssl \
     --with-libidn2 \
     --with-json-c \
     --with-libxml2 \
-    --with-lmdb \
-    --with-libtool
+    --with-lmdb
   make
 }
 
