--- a/usbutils/PKGBUILD
+++ b/usbutils/PKGBUILD
@@ -9,7 +9,7 @@ pkgname=usbutils
 pkgver=014
 pkgrel=2
 pkgdesc="A collection of USB tools to query connected USB devices"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://git.kernel.org/pub/scm/linux/kernel/git/gregkh/usbutils.git/"
 license=('GPL2' 'GPL3')
 depends=('glibc' 'hwdata')
