--- a/gpgme/PKGBUILD
+++ b/gpgme/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgbase=gpgme
 pkgname=(gpgme qgpgme python-gpgme)
-pkgver=1.17.0
-pkgrel=2
+pkgver=1.17.1
+pkgrel=1
 _python_ver=3.10
 pkgdesc='A C wrapper library for GnuPG'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -18,7 +18,7 @@ validpgpkeys=('6DAA6E64A76D2840571B4902528897B826403ADA') # Werner Koch (dist si
 source=("https://www.gnupg.org/ftp/gcrypt/${pkgbase}/${pkgbase}-${pkgver}.tar.bz2"{,.sig}
         python310.patch
         include-config.patch)
-sha256sums=('4ed3f50ceb7be2fce2c291414256b20c9ebf4c03fddb922c88cda99c119a69f5'
+sha256sums=('711eabf5dd661b9b04be9edc9ace2a7bc031f6bd9d37a768d02d0efdef108f5f'
             'SKIP'
             '5de2f6bcb6b30642d0cbc3fbd86803c9460d732f44a526f44cedee8bb78d291a'
             '4890c50c94dc05bc054eef7ddba02a9ef2162c32b575d044ede127ada621b826')
@@ -39,11 +39,11 @@ build() {
   esac
 
   ./configure \
+    --build=${CHOST} \
     --prefix=/usr \
     --disable-fd-passing \
     --disable-static \
-    --disable-gpgsm-test \
-    --build=${CHOST}
+    --disable-gpgsm-test
   make
 
   # ensure reproducibility of .pyc files
