--- a/java/java11-openjdk/PKGBUILD
+++ b/java/java11-openjdk/PKGBUILD
@@ -1,6 +1,7 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
-# Maintainer: Guillaume ALAUX <guillaume@archlinux.org>
+# Maintainer: Frederik Schwan <freswa at archlinux dot org>
+# Contributor: Guillaume ALAUX <guillaume@archlinux.org>
 
 # TODO add test, see about packaging jtreg and using it here
 # TODO see about building with OpenJDK10
@@ -13,34 +14,31 @@
 # TODO extract a jdk-headless package?
 
 pkgbase=java11-openjdk
-pkgname=('jre11-openjdk-headless' 'jre11-openjdk' 'jdk11-openjdk' 'openjdk11-src')
-[ "${CARCH}" != 'powerpc' -a "${CARCH}" != 'riscv64' ] && pkgname+=('openjdk11-doc')
+pkgname=('jre11-openjdk-headless' 'jre11-openjdk' 'jdk11-openjdk' 'openjdk11-src' 'openjdk11-doc')
 _majorver=11
 _minorver=0
-_securityver=12
-_updatever=7
-pkgrel=1
+_securityver=15
+_updatever=3
 pkgver=${_majorver}.${_minorver}.${_securityver}.u${_updatever}
-_hg_tag=jdk-${_majorver}.${_minorver}.${_securityver}+${_updatever}
+pkgrel=1
+_git_tag=jdk-${_majorver}.${_minorver}.${_securityver}+${_updatever}
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://openjdk.java.net/'
 license=('custom')
-makedepends=('cpio' 'unzip' 'zip' 'libelf' 'libcups' 'libx11'
+makedepends=('jdk11-openjdk' 'java-environment<12' 'cpio' 'unzip' 'zip' 'libelf' 'libcups' 'libx11'
              'libxrender' 'libxtst' 'libxt' 'libxext' 'libxrandr' 'alsa-lib'
              'graphviz' 'freetype2' 'libjpeg-turbo' 'giflib' 'libpng' 'lcms2'
              'libnet' 'bash' 'harfbuzz' 'glibc' 'gcc-libs')
-makedepends_powerpc64le=('pandoc')
 makedepends_x86_64=('pandoc')
-source=(https://hg.openjdk.java.net/jdk-updates/jdk${_majorver}u/archive/${_hg_tag}.tar.gz
+options=(!lto)
+source=(https://github.com/openjdk/jdk${_majorver}u/archive/${_git_tag}.tar.gz
         freedesktop-java.desktop
         freedesktop-jconsole.desktop
-        freedesktop-jshell.desktop
-        riscv64.diff)
-sha256sums=('06ad7b39625374c30a8d8be9e7e18f37663ba6fe44c2a66aa7b7987b140d069a'
+        freedesktop-jshell.desktop)
+sha256sums=('0fae80f730d890611d801a5a61d6a08a7b1e3b687b80fc5ee4aa02b5cbd99a41'
             '575587ad58dfa9908f046d307b9afc7b0b2eb20a1eb454f8fdbbd539ea7b3d01'
             '2f57b7c7dd671eabe9fa10c4f1283573e99d7f7c36eccd82c95b705979a2e8cb'
-            'f271618a8c2a892b554caf26857af41efdf0d8bcb95d57ce7ba535d6979e96da'
-            'af098f2ff62627cff0b6bf2e81df799477d38c0fb150d54f8bee24547825fcb0')
+            'f271618a8c2a892b554caf26857af41efdf0d8bcb95d57ce7ba535d6979e96da')
 
 case "${CARCH}" in
   'x86_64') _JARCH=amd64 ; _DOC_ARCH=x86_64; _JVM_TYPE=server ;;
@@ -51,7 +49,7 @@ case "${CARCH}" in
 esac
 
 _jvmdir=/usr/lib/jvm/java-${_majorver}-openjdk
-_jdkdir=jdk${_majorver}u-${_hg_tag}
+_jdkdir=jdk${_majorver}u-${_git_tag//+/-}
 _imgdir=${_jdkdir}/build/linux-${_JARCH}-normal-${_JVM_TYPE}-release/images
 
 _nonheadless=(lib/libawt_xawt.{so,debuginfo}
@@ -59,13 +57,8 @@ _nonheadless=(lib/libawt_xawt.{so,debuginfo}
               lib/libjsound.{so,debuginfo}
               lib/libsplashscreen.{so,debuginfo})
 
-export PATH=/home/builder/jdk11/usr/lib/jvm/java-11-openjdk-riscv64/bin:$PATH
-export JAVA_HOME=/home/builder/jdk11/usr/lib/jvm/java-11-openjdk-riscv64
-
 build() {
   cd ${_jdkdir}
-
-  patch -Np1 -i ${srcdir}/riscv64.diff
 
   NUM_PROC_OPT=''
   MAKEFLAG_J=$(echo ${MAKEFLAGS} | sed -En 's/.*-j([0-9]+).*/\1/p')
@@ -96,13 +89,13 @@ build() {
   #  --with-extra-cflags="${CFLAGS}"
   #  --with-extra-cxxflags="${CXXFLAGS}"
   #  --with-extra-ldflags="${LDFLAGS}"
-  # See also paragraph "Configure Control Variables from "jdk${_majorver}-${_hg_tag}/common/doc/building.md
+  # See also paragraph "Configure Control Variables from "jdk${_majorver}-${_git_tag}/common/doc/building.md
   unset CFLAGS
   unset CXXFLAGS
   unset LDFLAGS
 
   case "${CARCH}" in
-    powerpc|riscv64) EXTRA_CONFIGURE_FLAGS="--with-jvm-variants=zero"
+    powerpc|riscv64) EXTRA_CONFIGURE_FLAGS="--with-jvm-variants=zero --disable-precompiled-headers"
   esac
 
   bash configure \
@@ -126,16 +119,14 @@ build() {
     ${NUM_PROC_OPT} ${CCACHE_ENABLE} ${EXTRA_CONFIGURE_FLAGS}
     #--disable-javac-server
 
-  [ "${CARCH}" != 'powerpc' ] && DOCS=docs
-
-  make images legacy-jre-image ${DOCS}
+  make images legacy-jre-image docs 
 
   # https://bugs.openjdk.java.net/browse/JDK-8173610
   find "../${_imgdir}" -iname '*.so' -exec chmod +x {} \;
 }
 
 check() {
-  cd jdk${_majorver}u-${_hg_tag}
+  cd ${_jdkdir}
   # TODO package jtreg
   # make -k check
 }
@@ -267,7 +258,7 @@ package_jdk11-openjdk() {
   # Icons
   for s in 16 24 32 48; do
     install -Dm 644 \
-      "${srcdir}/jdk${_majorver}u-${_hg_tag}/src/java.desktop/unix/classes/sun/awt/X11/java-icon${s}.png" \
+      "${srcdir}/${_jdkdir}/src/java.desktop/unix/classes/sun/awt/X11/java-icon${s}.png" \
       "${pkgdir}/usr/share/icons/hicolor/${s}x${s}/apps/${pkgbase}.png"
   done
 
