* udpate various pip modules

--- a/python/pyqt5/PKGBUILD
+++ b/python/pyqt5/PKGBUILD
@@ -12,6 +12,7 @@ pkgdesc="A set of Python bindings for the Qt5 toolkit"
 pkgver=5.15.6
 pkgrel=7
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://riverbankcomputing.com/software/pyqt/intro"
 license=('GPL')
 groups=(pyqt5)
