--- a/python/python-aiofiles/PKGBUILD
+++ b/python/python-aiofiles/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=python-aiofiles
 pkgver=0.8.0
-pkgrel=1
+pkgrel=2
 pkgdesc='File support for asyncio'
 arch=(any)
 license=(APACHE)
@@ -37,6 +37,7 @@ build() {
 
 check() {
   cd aiofiles
+  SETUPTOOLS_USE_DISTUTILS=stdlib \
   tox -e py310
 }
 
