--- a/python/python-astroid/PKGBUILD
+++ b/python/python-astroid/PKGBUILD
@@ -6,7 +6,7 @@
 
 _pyname=astroid
 pkgname=python-$_pyname
-pkgver=2.9.3
+pkgver=2.11.0
 pkgrel=1
 pkgdesc='A common base representation of python source code'
 arch=(any)
@@ -17,17 +17,19 @@ _pydeps=(lazy-object-proxy
          wrapt)
 depends=(python
          "${_pydeps[@]/#/python-}")
-makedepends=(python-setuptools)
+makedepends=(python-{build,installer}
+             python-setuptools
+             python-wheel)
 checkdepends=(python-pytest)
 replaces=(python-logilab-astng)
 conflicts=(python-logilab-astng)
 _archive="$_pyname-$pkgver"
 source=("$url/archive/v$pkgver/$_archive.tar.gz")
-sha256sums=('07234423c3722df6aa067c15f5fa60adf4f1d6ae659d2ab147acb40a8a1904f7')
+sha256sums=('08632993879c30d1534f3aa47c2d2cf1fa2f57418c9750874c990fae95c222a3')
 
 build() {
 	cd "$_archive"
-	python setup.py build
+	python -m build -wn
 }
 
 check() {
@@ -37,5 +39,5 @@ check() {
 
 package() {
 	cd "$_archive"
-	python setup.py install --root="$pkgdir" --optimize=1 --skip-build
+	python -m installer -d "$pkgdir" dist/*.whl
 }
