--- a/python/python-flexmock/PKGBUILD
+++ b/python/python-flexmock/PKGBUILD
@@ -2,28 +2,33 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=python-flexmock
-pkgver=0.11.1
-pkgrel=3
+pkgver=0.11.3
+pkgrel=1
 pkgdesc="Mock/Stub/Spy library for Python"
 arch=('any')
 license=('BSD')
-url="https://has207.github.com/flexmock"
+url="https://flexmock.readthedocs.io"
 depends=('python')
 makedepends=('python-setuptools')
-checkdepends=('python-pytest-runner')
-source=("$pkgbase-$pkgver.tar.gz::https://github.com/bkabrda/flexmock/archive/$pkgver.tar.gz")
-sha512sums=('c845c74a8a62ebcf6d9ca4d954d0961fe1d5e0302511a2491e708052a9a9831ec1b5fe2cef9c9483ef12ff5b257993a765fe58b41118046c36889eb7dcbe7de8')
+checkdepends=('python-pytest' 'python-teamcity-messages' 'python-testtools' 'python-twisted')
+source=("https://github.com/flexmock/flexmock/archive/$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('58c84317fb687fd708db7c909fe7109b8b9c37a932fd1a46c9f62d28bbcc56a807b35a6790bf1393289f85fdffdfa2367f7ccc05bff260a167731471a50d2685')
 
 export LC_CTYPE=en_US.UTF-8
 
+prepare() {
+  cd flexmock-$pkgver
+  sed -i 's/PYTHONPATH=\$(shell pwd) //' Makefile
+}
+
 build() {
-  cd "$srcdir"/flexmock-$pkgver
+  cd flexmock-$pkgver
   python setup.py build
 }
 
 check() {
-  cd "$srcdir"/flexmock-$pkgver
-  python setup.py pytest
+  cd flexmock-$pkgver
+  PYTHONPATH="$PWD":"$PWD"/build/lib make test
 }
 
 package() {
