--- a/python/python-fonttools/PKGBUILD
+++ b/python/python-fonttools/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=python-fonttools
 _pyname=${pkgname#python-}
-pkgver=4.29.1
+pkgver=4.31.1
 pkgrel=1
 pkgdesc='A library to manipulate font files from Python'
 url="https://github.com/fonttools/$_pyname"
@@ -14,7 +14,9 @@ license=('MIT')
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('python')
 makedepends=('cython'
-             'python-setuptools')
+             'python-'{build,installer}
+             'python-setuptools'
+             'python-wheel')
 checkdepends=('python-brotli'
               'python-fs'
               'python-pytest'
@@ -31,12 +33,11 @@ optdepends=('python-brotli: to compress/decompress WOFF 2.0 web fonts'
             'python-unicodedata2: for displaying the Unicode character names when dumping the cmap table with ttx'
             'python-zopfli: faster backend fom WOFF 1.0 web fonts compression')
 source=("$url/archive/$pkgver/$_pyname-$pkgver.tar.gz")
-sha256sums=('db2ec36d9d202af630be1e0cf05108afd8eda5aa66b82957e3ed75065d3e2cdd')
+sha256sums=('de2db06ea3f4ed9431530592e5ce695872f53070dbe6eb3a345d3fde18785f70')
 
 build() {
 	cd "$_pyname-$pkgver"
-	python setup.py build_ext --inplace
-	python setup.py build
+	python -m build -wn
 }
 
 check() {
@@ -46,6 +47,6 @@ check() {
 
 package() {
 	cd "$_pyname-$pkgver"
-	python setup.py install --root="$pkgdir" --optimize=1 --skip-build
+	python -m installer -d "$pkgdir" dist/*.whl
 	install -Dm0755 -t "$pkgdir/usr/share/licenses/$pkgname/" LICENSE
 }
