--- a/python/python-poetry-core/PKGBUILD
+++ b/python/python-poetry-core/PKGBUILD
@@ -1,54 +1,49 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Eli Schwartz <eschwartz@archlinux.org>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
+# Contributor: Eli Schwartz <eschwartz@archlinux.org>
 # Contributor: George Rawlinson <george@rawlinson.net.nz>
 
 _pkgname=poetry-core
 pkgname=python-poetry-core
-pkgver=1.0.7
-pkgrel=3
+pkgver=1.0.8
+pkgrel=1
 pkgdesc="Poetry PEP 517 Build Backend & Core Utilities"
 arch=('any')
 url="https://github.com/python-poetry/${_pkgname}"
 license=('MIT')
 _deps=('jsonschema' 'lark-parser' 'packaging' 'tomlkit')
 depends=("${_deps[@]/#/python-}")
-makedepends=('python-dephell')
-checkdepends=('git' 'python-pytest' 'python-pytest-mock' 'python-virtualenv')
+makedepends=(python-{build,installer})
+checkdepends=(git python-pytest python-pytest-mock python-virtualenv)
 conflicts=('python-poetry<1.1.0')
-source=("${_pkgname}-${pkgver}.tar.gz::${url}/archive/${pkgver}.tar.gz")
-sha256sums=('a4a99d2d0adb54d69acaa6d852bc9d41818b5a2d751aa23a9543e32bc4e6660d')
-b2sums=('570f13e3c7298fd822a38b75c49c623bde4fa780b3787c3c9cfa3939bb68fee3eeaf6190013117a6e751cb6f87a15b343ba183529fcc07d30e37988097954d4a')
+_archive="$_pkgname-$pkgver"
+source=("$url/archive/$pkgver/$_archive.tar.gz")
+sha256sums=('b8795006e169a24e0e114ba1c03217716cd190e8d2716c796ddc5ed0382dbca8')
+b2sums=('1f663d927aee1f18a9ff38cbf95809538bf9c9e8079d040c240fbc1ffa9e492c6fd20c69f89ddf7e68ddea05beee3b909fdee02e93f47437fffa687dc492ec9a')
 
 prepare() {
-    cd ${_pkgname}-${pkgver}
-
-    # remove vendored dependencies
-    sed -i '/^__version__/!d' poetry/core/__init__.py
-    rm -r poetry/core/_vendor
-
-    # be a proper namespace, python3-only ;)
-    rm poetry/__init__.py
-
-    dephell deps convert --from pyproject.toml --to setup.py
+	cd "$_archive"
+	# remove vendored dependencies
+	sed -i '/^__version__/!d' poetry/core/__init__.py
+	rm -r poetry/core/_vendor
+	# be a proper namespace, python3-only ;)
+	rm poetry/__init__.py
 }
 
 build() {
-    cd ${_pkgname}-${pkgver}
-
-    python setup.py build
+	cd "$_archive"
+	python -m build -wn
 }
 
 check() {
-    cd ${_pkgname}-${pkgver}
-
-    # only works inside git repositories
-    pytest \
-        -k 'not test_default_with_excluded_data and not test_default_src_with_excluded_data'
+	cd "$_archive"
+	# only works inside git repositories
+	pytest \
+		-k 'not test_default_with_excluded_data and not test_default_src_with_excluded_data'
 }
 
 package() {
-    cd ${_pkgname}-${pkgver}
-
-    python setup.py install --root="${pkgdir}" --optimize=1 --skip-build
-    install -Dm644 LICENSE "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
+	cd "$_archive"
+	python -m installer -d "$pkgdir" dist/*.whl
+	install -Dm0644 -t "$pkgdir/usr/share/licenses/$pkgname/" LICENSE
 }
