--- a/python/python-prettytable/PKGBUILD
+++ b/python/python-prettytable/PKGBUILD
@@ -5,7 +5,7 @@
 
 _pkgname=prettytable
 pkgname=python-prettytable
-pkgver=2.2.0
+pkgver=2.3.0
 pkgrel=1
 pkgdesc="A simple Python library for easily displaying tabular data"
 url="https://github.com/jazzband/prettytable"
@@ -13,12 +13,12 @@ arch=('any')
 license=('BSD')
 depends=('python-wcwidth')
 makedepends=('python-setuptools-scm')
-checkdepends=('python-pytest')
+checkdepends=('python-pytest-lazy-fixture')
 conflicts=('python-ptable')
 source=("https://files.pythonhosted.org/packages/source/p/prettyTable/prettytable-${pkgver}.tar.gz")
-sha512sums=('df8ae2a1103a4965a351ba16a95ef9659107075bb023090bd9bffd69805ce647dcb26f49164f07f5af0c0b03503373c0353935b32a0fb18edf969dc984aecda7')
+sha512sums=('feeaeeb0a1897c0aaa2bc0ac7f470244529e8c70debb26976494719607840c8b8a80698b7e463402031b250fe152091e947555be2a6f983764e01bdaa1a71a22')
 
-export SETUPTOOLSA_SCM_PRETEND_VERSION=$pkgver
+export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 
 build() {
   cd prettytable-$pkgver
