--- a/python/python-tzlocal/PKGBUILD
+++ b/python/python-tzlocal/PKGBUILD
@@ -7,18 +7,19 @@
 
 _name=tzlocal
 pkgname=python-tzlocal
-pkgver=4.0.1
-pkgrel=3
+pkgver=2.1
+pkgrel=1
+epoch=1
 pkgdesc="Tzinfo object for the local timezone"
 arch=('any')
 url="https://github.com/regebro/tzlocal"
 license=('MIT')
-depends=('python-pytz-deprecation-shim')
+depends=('python-pytz')
 makedepends=('python-setuptools')
-checkdepends=('python-pytest' 'python-pytest-mock')
+checkdepends=('python-pytest' 'python-mock')
 source=("https://files.pythonhosted.org/packages/source/${_name::1}/${_name}/${_name}-${pkgver}.tar.gz")
-sha256sums=('8560aabba61b5d2a5e1697bb781f682e6eaa3ce386cee85a09a458cc0003f836')
-b2sums=('6a55ef65f0c8bf791abdb8f0cb4c1f54abf4a47653e46dcb2246609fe66ef6d4c4121de48b3ec42d245c7cfd20ef242aae3381afd8b01f88dd67123402973e30')
+sha256sums=('643c97c5294aedc737780a49d9df30889321cbe1204eac2c2ec6134035a92e44')
+b2sums=('5437dd5ffa1259dc6e159078302eccd5c6573366d6adbfd276f4e036fde5bf2d67c9ec2ebbcd9d263efcb52eb8a57d19453d7db4307d044acc55d9de79fca6a7')
 
 prepare() {
   mv -v "${_name}-${pkgver}" "${pkgname}-${pkgver}"
@@ -36,7 +37,9 @@ build() {
 check() {
   cd "${pkgname}-${pkgver}"
   export PYTHONPATH="build:${PYTHONPATH}"
-  pytest -v
+  # disable failing timezone test:
+  # https://github.com/regebro/tzlocal/issues/89
+  pytest -v tests/tests.py -k 'not test_fail'
 }
 
 package() {
