--- a/go/go/PKGBUILD
+++ b/go/go/PKGBUILD
@@ -15,10 +15,10 @@
 
 pkgname=go
 epoch=2
-pkgver=1.17.6
-pkgrel=2
+pkgver=1.18
+pkgrel=1
 pkgdesc='Core compiler tools for the Go programming language'
-arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(x86_64 powerpc64le riscv64)
 url='https://golang.org/'
 license=(BSD)
 makedepends=(git go perl)
@@ -27,13 +27,14 @@ provides=(go-pie)
 options=(!strip staticlibs)
 source=(https://storage.googleapis.com/golang/go$pkgver.src.tar.gz{,.asc})
 validpgpkeys=('EB4C1BFD4F042F6DDDCCEC917721F63BD38B4796')
-sha256sums=('4dc1bbf3ff61f0c1ff2b19355e6d88151a70126268a47c761477686ef94748c8'
+sha256sums=('38f423db4cc834883f2b52344282fa7a39fbb93650dc62a11fdf0be6409bdad6'
             'SKIP')
 
 build() {
   case "${CARCH}" in
     x86_64) export GOARCH=amd64 ;;
     powerpc64le) export GOARCH=ppc64le ;;
+    riscv64) export GOARCH=riscv64 ;;
   esac
 
   export GOAMD64=v1 # make sure we're building for the right x86-64 version
