--- a/go/go-tools/PKGBUILD
+++ b/go/go-tools/PKGBUILD
@@ -4,15 +4,15 @@
 
 pkgname=go-tools
 epoch=4
-pkgver=0.1.8
+pkgver=0.1.10
 pkgrel=1
 pkgdesc='Developer tools for the Go programming language'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url='https://golang.org/'
 license=(BSD)
 depends=(glibc)
 makedepends=(git go)
-_commit=e212aff8fd146c44ddb0167c1dfbd5531d6c9213
+_commit=c20fd7c261728ff8bc25aebb4d850b0880ab0530
 source=(go-tools::git+https://go.googlesource.com/tools#commit=$_commit)
 md5sums=('SKIP')
 
