* update go-md2man to 2.0.1-1

--- a/go/go-md2man/PKGBUILD
+++ b/go/go-md2man/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=go-md2man
 pkgver=2.0.1
 pkgrel=1
 pkgdesc='A markdown to manpage generator'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url='https://github.com/cpuguy83/go-md2man'
 license=('MIT')
 makedepends=('go')
