* update containerd to 1.6.1-1

--- a/go/containerd/PKGBUILD
+++ b/go/containerd/PKGBUILD
@@ -5,14 +5,14 @@
 # Contributor: Iwan Timmer <irtimmer@gmail.com>
 
 pkgname=containerd
-pkgver=1.5.9
-pkgrel=2
+pkgver=1.6.1
+pkgrel=1
 pkgdesc='An open and reliable container runtime'
 url='https://containerd.io/'
 depends=('runc')
 makedepends=('go' 'git' 'btrfs-progs' 'libseccomp' 'containers-common' 'go-md2man')
 provides=('container-runtime')
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 license=("Apache")
 source=("git+https://github.com/containerd/containerd.git#tag=v${pkgver}?signed")
 validpgpkeys=("8C7A111C21105794B0E8A27BF58C5D0A4405ACDB") # Derek McGowan
@@ -38,7 +38,7 @@ check() {
 
 package() {
   cd "${pkgname}" 
-  make DESTDIR="$pkgdir/usr" install
+  make PREFIX=/usr DESTDIR="$pkgdir/" install
   install -Dm644 containerd.service "$pkgdir"/usr/lib/systemd/system/containerd.service
   install -Dm644 man/*.8 -t "$pkgdir/usr/share/man/man8"
   install -Dm644 man/*.5 -t "$pkgdir/usr/share/man/man5"
