--- a/bridge-utils/PKGBUILD
+++ b/bridge-utils/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=bridge-utils
 pkgver=1.7.1
 pkgrel=1
 pkgdesc="Utilities for configuring the Linux ethernet bridge"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://wiki.linuxfoundation.org/networking/bridge'
 license=('GPL')
 depends=('glibc')
