--- a/go/podman/PKGBUILD
+++ b/go/podman/PKGBUILD
@@ -1,21 +1,23 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
-# Contributor: David Runge <dvzrv@archlinux.org>
+# Maintainer: David Runge <dvzrv@archlinux.org>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 
 pkgbase=podman
 pkgname=(podman podman-docker)
-pkgver=3.4.4
-pkgrel=1
+pkgver=4.0.1
+pkgrel=2
 pkgdesc='Tool and library for running OCI-based containers in pods'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url='https://github.com/containers/podman'
 license=(Apache)
-makedepends=(apparmor btrfs-progs device-mapper go go-md2man git gpgme
-             libseccomp systemd)
+makedepends=(apparmor btrfs-progs device-mapper go go-md2man git gpgme libseccomp systemd)
+# https://github.com/containers/podman/issues/13297
+options=(!lto)
 source=("git+$url#tag=v$pkgver?signed")
-validpgpkeys=('B7DBDCA456F7335E91F1C25CD3624C551D0515C4'
-              '7CE1E6F8C90CB53E7E4D8F2D502E08DB0BBF8EEE')
+validpgpkeys=(
+  'B7DBDCA456F7335E91F1C25CD3624C551D0515C4'  # Matthew Heon <mheon@redhat.com>
+)
 sha256sums=('SKIP')
 
 pkgver() {
@@ -32,22 +34,25 @@ build() {
   export CGO_LDFLAGS="${LDFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath"
 
-  cd $pkgname
-  make EXTRA_LDFLAGS='-s -w -linkmode=external'
+  make EXTRA_LDFLAGS='-s -w -linkmode=external' -C $pkgbase
+  make docker-docs -C $pkgbase
 }
 
 package_podman() {
-  depends=(cni-plugins conmon containers-common crun fuse-overlayfs iptables
-  libdevmapper.so libgpgme.so libseccomp.so slirp4netns)
-  optdepends=('apparmor: for AppArmor support'
-              'btrfs-progs: support btrfs backend devices'
-              'catatonit: --init flag support'
-              'podman-docker: for Docker-compatible CLI')
+  depends=(conmon containers-common crun iptables libdevmapper.so libgpgme.so
+  libseccomp.so slirp4netns)
+  optdepends=(
+    'apparmor: for AppArmor support'
+    'btrfs-progs: support btrfs backend devices'
+    'catatonit: --init flag support'
+    'netavark: for a new container-network-stack implementation'
+    'podman-compose: for docker-compose compatibility'
+    'podman-docker: for Docker-compatible CLI'
+  )
 
-  cd $pkgname
-  make install install.completions DESTDIR="$pkgdir" PREFIX=/usr
+  make install install.completions DESTDIR="$pkgdir" PREFIX=/usr LIBEXECDIR=/usr/lib -C $pkgbase
   # remove man pages provided by containers-common
-  rm -rvf "${pkgdir}/usr/share/man/man5"
+  rm -rvf "$pkgdir/usr/share/man/man5"
 }
 
 package_podman-docker() {
@@ -56,6 +61,5 @@ package_podman-docker() {
   conflicts=(docker)
   provides=(docker)
 
-  cd podman
-  make -j1 install.docker-full DESTDIR="$pkgdir" PREFIX=/usr
+  make -j1 install.docker-full DESTDIR="$pkgdir" PREFIX=/usr -C $pkgbase
 }
