* update libvpx to 1.11.0-2

--- a/libvpx/PKGBUILD
+++ b/libvpx/PKGBUILD
@@ -5,14 +5,18 @@
 
 pkgname=libvpx
 pkgver=1.11.0
-pkgrel=1
+pkgrel=2
 pkgdesc='VP8 and VP9 codec'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://www.webmproject.org/
 license=(BSD)
 depends=(gcc-libs)
-makedepends=(git)
-makedepends_x86_64=(nasm)
+makedepends=(
+  git
+)
+makedepends_x86_64=(
+  nasm
+)
 provides=(libvpx.so)
 _tag=626ff35955c2c35b806b3e0ecf551a1a8611cdbf
 source=(git+https://chromium.googlesource.com/webm/libvpx#tag=${_tag})
@@ -26,6 +30,9 @@ pkgver() {
 
 build() {
   cd libvpx
+
+  CFLAGS+=' -ffat-lto-objects'
+  CXXFLAGS+=' -ffat-lto-objects'
 
   ./configure \
     --prefix=/usr \
