--- a/pugixml/PKGBUILD
+++ b/pugixml/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Gustavo Alvarez <sl1pkn07@gmail.com>
 
 pkgname=pugixml
-pkgver=1.11.4
+pkgver=1.12.1
 pkgrel=1
 pkgdesc="Light-weight, simple and fast XML parser for C++ with XPath support"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,10 +13,10 @@ license=(MIT)
 depends=(gcc-libs)
 makedepends=(cmake)
 source=(https://github.com/zeux/pugixml/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('8ddf57b65fb860416979a3f0640c2ad45ddddbbafa82508ef0a0af3ce7061716')
+sha256sums=('dcf671a919cc4051210f08ffd3edf9e4247f79ad583c61577a13ee93af33afc7')
 
 build() {
-    cmake -B build -S ${pkgname}-${pkgver} \
+    cmake -B build -S ${pkgname}-${pkgver%.1} \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DBUILD_SHARED_LIBS=ON
     make -C build
@@ -24,5 +24,5 @@ build() {
 
 package() {
     make -C build DESTDIR="${pkgdir}" install
-    install -Dm644 ${pkgname}-${pkgver}/readme.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}/
+    install -Dm644 ${pkgname}-${pkgver%.1}/readme.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}/
 }
