* update glibc to 2.35-3

--- a/glibc/PKGBUILD
+++ b/glibc/PKGBUILD
@@ -1,77 +1,78 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer:  Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
+# Maintainer: Giancarlo Razzolini <grazzolini@archlinux.org>
+# Maintainer: Frederik Schwan <freswa at archlinux dot org>
+# Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Contributor: Allan McRae <allan@archlinux.org>
 
-# toolchain build order: linux-api-headers->glibc->binutils->gcc->binutils->glibc
+# toolchain build order: linux-api-headers->glibc->binutils->gcc->glibc->binutils->gcc
 # NOTE: valgrind requires rebuilt with each major glibc version
 
-pkgname=glibc
+pkgbase=glibc
+pkgname=(glibc)
 pkgver=2.35
-pkgrel=2
+pkgrel=3
 arch=(powerpc64le powerpc riscv64)
-groups=(base)
 url='https://www.gnu.org/software/libc'
-pkgdesc='GNU C Library'
 license=(GPL LGPL)
-depends=('linux-api-headers>=5.16' tzdata filesystem)
 makedepends=(git gd python)
-optdepends=('perl: for mtrace')
-conflicts=(systemtap)
-provides=(systemtap)
-options=(!strip staticlibs)
-#_commit=18fdba553dd9b907e9812b90d2cea593f776058f
+options=(!strip staticlibs !lto)
+#_commit=3de512be7ea6053255afed6154db9ee31d4e557a
 #source=(git+https://sourceware.org/git/glibc.git#commit=$_commit
 source=(https://ftp.gnu.org/gnu/glibc/glibc-$pkgver.tar.xz{,.sig}
-	locale.gen.txt
-	locale-gen
-        sdt-config.h
-        sdt.h
-	disable-clone3.diff)
+        locale.gen.txt
+        locale-gen
+        sdt.h sdt-config.h
+        disable-clone3.diff
+        0001-localedef-Update-LC_MONETARY-handling-Bug-28845.patch
+        0001-localedata-Do-not-generate-output-if-warnings-were-p.patch
+)
 validpgpkeys=(7273542B39962DF7B299931416792B4EA25340F8 # Carlos O'Donell
               BC7C7372637EC10C57D7AA6579C43DFBF1CF2187) # Siddhesh Poyarekar
-sha256sums=('5123732f6b67ccd319305efd399971d58592122bcc2a6518a1bd2510dd0cf52e'
-            'SKIP'
-            'd42648cea552ba5353a32e264686e992263289d5cc86207314dffc54ab514981'
-            '83f108f915863c7ed0338e2d3e8f2e071a531a090ef8f8b2eb3a956a3c4f04d7'
-            'cdc234959c6fdb43f000d3bb7d1080b0103f4080f5e67bcfe8ae1aaf477812f0'
-            '774061aff612a377714a509918a9e0e0aafce708b87d2d7e06b1bd1f6542fe70'
-            'f5df8fc95592cce7825744aeb8c9699a5b4b5b7ccf7bcf554355167c3a7e375e')
-optdepends=('gd: for memusagestat')
-install=glibc.install
-backup=(etc/gai.conf
-        etc/locale.gen
-        etc/nscd.conf)
-groups=(base)
+b2sums=('623c728884f070cd87ffeb9203f74206197c52405ac9bc44f3dd519a3468b8e8ae2536c883e5d17d94417dbd1e91775de2e674314e4ff7424f9720026d6b7063'
+        'SKIP'
+        '46d533d25c7a2ce4ae75d452eee7ebb8e3ce4d191af9be3daa43718b78cb81d33cfd8046a117a15d87de9f5e940448c66005b0490515bf731c9e4691c53908d6'
+        '1f6d927b4972220b1c00abee5329c5d6bc01ed5bee57b20db0c7d7433292f7d666b02baf9968267f8e378b1f3bb273e8eef0ccbf22d21400ac36949d7615a474'
+        'a6a5e2f2a627cc0d13d11a82458cfd0aa75ec1c5a3c7647e5d5a3bb1d4c0770887a3909bfda1236803d5bc9801bfd6251e13483e9adf797e4725332cd0d91a0e'
+        '214e995e84b342fe7b2a7704ce011b7c7fc74c2971f98eeb3b4e677b99c860addc0a7d91b8dc0f0b8be7537782ee331999e02ba48f4ccc1c331b60f27d715678'
+        'edef5f724f68ea95c6b0127bd13a10245f548afc381b2d0a6d1d06ee9f87b7dd89c6becd35d5ae722bf838594eb870a747f67f07f46e7d63f8c8d1a43cce4a52'
+        '3c4de02d6308a4d39693e6effa08894ae096397347e439b93b0b5328aba41a373f7f2eeb88c109970f69cca65aaa74ba14e384d6d033f6a913438f4f920854a6'
+        'b6014af23688ea971d7af38d58829c8016a0af63770b7f5e8bc986c13ea2cafefe0935ff483b1b37c87ebe3e652b6e0c48ab43dd8ae752d0ed7fecc3751432f4')
 
 prepare() {
-  mkdir -p glibc-build lib32-glibc-build
+  mkdir -p glibc-build
 
   [[ -d glibc-$pkgver ]] && ln -s glibc-$pkgver glibc 
   cd glibc
+
   # Disable clone3 syscall for now
   # Can be removed when eletron{9,11,12} and discord are removed or patched:
   # https://github.com/electron/electron/commit/993ecb5bdd5c57024c8718ca6203a8f924d6d574
   # Patch src: https://patchwork.ozlabs.org/project/glibc/patch/87eebkf8ph.fsf@oldenburg.str.redhat.com/
   patch -Np1 -i "${srcdir}"/disable-clone3.diff
+
+  # Fix C.UTF-8 generation errors
+  # https://bugs.archlinux.org/task/73797
+  patch -Np1 -i "${srcdir}"/0001-localedef-Update-LC_MONETARY-handling-Bug-28845.patch
+  patch -Np1 -i "${srcdir}"/0001-localedata-Do-not-generate-output-if-warnings-were-p.patch
 }
 
 build() {
   local _configure_flags=(
-        --host=$CHOST
-	--build=$CHOST
-        --prefix=/usr
-	--enable-add-ons
-	--enable-lock-elision
-	--enable-bind-now
-	--enable-stackguard-randomization
-	--enable-stack-protector=strong
-	--with-pkgversion="ArchPOWER GLIBC ${pkgver}"
-	--with-headers=/usr/include
-	--disable-multi-arch
-	--enable-systemtap
-	--disable-profile
-	--enable-kernel=4.4
-	--disable-werror ${CPU}
+      --host=$CHOST
+      --build=$CHOST
+      --prefix=/usr
+      --with-headers=/usr/include
+      --with-bugurl=https://github.com/kth5/archpower/issues
+      --enable-bind-now
+      --enable-cet
+      --enable-kernel=4.4
+      --disable-multi-arch
+      --enable-stack-protector=strong
+      --enable-systemtap
+      --disable-profile
+      --disable-crypt
+      --disable-werror
+      --with-pkgversion="ArchPOWER GLIBC ${pkgver}"
   )
 
   cd "$srcdir/glibc-build"
@@ -81,47 +82,73 @@ build() {
   echo "sbindir=/usr/bin" >> configparms
   echo "rootsbindir=/usr/bin" >> configparms
 
+  # Credits @allanmcrae
+  # https://github.com/allanmcrae/toolchain/blob/f18604d70c5933c31b51a320978711e4e6791cf1/glibc/PKGBUILD
   # remove fortify for building libraries
-  CPPFLAGS=${CPPFLAGS/-D_FORTIFY_SOURCE=2/}
-
-  CFLAGS=${CFLAGS/-fno-plt/}
-  CXXFLAGS=${CXXFLAGS/-fno-plt/}
-  LDFLAGS=${LDFLAGS/,-z,now/}
+  CFLAGS=${CFLAGS/-Wp,-D_FORTIFY_SOURCE=2/}
 
   "$srcdir/glibc/configure" \
       --libdir=/usr/lib \
       --libexecdir=/usr/lib \
-      --enable-cet \
-      ${_configure_flags[@]}
+      "${_configure_flags[@]}"
 
   # build libraries with fortify disabled
   echo "build-programs=no" >> configparms
-  make
+  make -O
 
   # re-enable fortify for programs
   sed -i "/build-programs=/s#no#yes#" configparms
+  echo "CFLAGS += -Wp,-D_FORTIFY_SOURCE=2" >> configparms
+  make -O
 
-  echo "CC += -D_FORTIFY_SOURCE=2" >> configparms
-  echo "CXX += -D_FORTIFY_SOURCE=2" >> configparms
-  make
+  # build info pages manually for reproducibility
+  make info
+}
+
+# Credits for skip_test() and check() @allanmcrae
+# https://github.com/allanmcrae/toolchain/blob/f18604d70c5933c31b51a320978711e4e6791cf1/glibc/PKGBUILD
+skip_test() {
+  test=$1
+  file=$2
+  sed -i "s/\b$test\b//" $srcdir/glibc/$file
 }
 
 check() {
   cd glibc-build
 
-  # remove fortify in preparation to run test-suite
-  sed -i '/FORTIFY/d' configparms
+  # adjust/remove buildflags that cause false-positive testsuite failures
+  sed -i '/FORTIFY/d' configparms                                     # failure to build testsuite
+  sed -i 's/-Werror=format-security/-Wformat-security/' config.make   # failure to build testsuite
+  sed -i '/CFLAGS/s/-fno-plt//' config.make                           # 16 failures
+  sed -i '/CFLAGS/s/-fexceptions//' config.make                       # 1 failure
+  LDFLAGS=${LDFLAGS/,-z,now/}                                         # 10 failures
 
-  # some failures are "expected"
-  make check || true
+  # The following tests fail due to restrictions in the Arch build system
+  # The correct fix is to add the following to the systemd-nspawn call:
+  # --system-call-filter="@clock @memlock @pkey"
+  skip_test test-errno-linux sysdeps/unix/sysv/linux/Makefile
+  skip_test tst-ntp_gettime  sysdeps/unix/sysv/linux/Makefile
+  skip_test tst-ntp_gettimex sysdeps/unix/sysv/linux/Makefile
+  skip_test tst-mlock2       sysdeps/unix/sysv/linux/Makefile
+  skip_test tst-pkey         sysdeps/unix/sysv/linux/Makefile
+  skip_test tst-adjtime      time/Makefile
+  skip_test tst-clock2       time/Makefile
+
+  make -O check
 }
 
-package() {
-  install -dm755 "$pkgdir/etc"
-  touch "$pkgdir/etc/ld.so.conf"
+package_glibc() {
+  pkgdesc='GNU C Library'
+  depends=('linux-api-headers>=4.10' tzdata filesystem)
+  optdepends=('gd: for memusagestat'
+              'perl: for mtrace')
+  install=glibc.install
+  backup=(etc/gai.conf
+          etc/locale.gen
+          etc/nscd.conf)
 
   make -C glibc-build install_root="$pkgdir" install
-  rm -f "$pkgdir"/etc/ld.so.{cache,conf}
+  rm -f "$pkgdir"/etc/ld.so.cache
 
   # Shipped in tzdata
   rm -f "$pkgdir"/usr/bin/{tzselect,zdump,zic}
@@ -149,18 +176,16 @@ package() {
 
     # Do not strip these for gdb and valgrind functionality, but strip the rest
     find "$pkgdir"/usr/lib \
-      -not -name 'ld-*.so' \
-      -not -name 'libc-*.so' \
-      -not -name 'libpthread-*.so' \
-      -not -name 'libthread_db-*.so' \
-      -name '*-*.so' -type f -exec strip $STRIP_SHARED {} + 2> /dev/null || true
+      -not -name 'ld-*.so*' \
+      -not -name 'libc.so*' \
+      -not -name 'libpthread.so*' \
+      -not -name 'libthread_db.so*' \
+      -name '*.so*' -type f -exec strip $STRIP_SHARED {} + 2> /dev/null || true
   fi
 
   # Provide tracing probes to libstdc++ for exceptions, possibly for other
   # libraries too. Useful for gdb's catch command.
   install -Dm644 "$srcdir/sdt.h" "$pkgdir/usr/include/sys/sdt.h"
   install -Dm644 "$srcdir/sdt-config.h" "$pkgdir/usr/include/sys/sdt-config.h"
-
-  # Provided by libxcrypt; keep the old shared library for backwards compatibility
-  rm -f "$pkgdir"/usr/include/crypt.h "$pkgdir"/usr/lib/libcrypt.{a,so*}
 }
+
