* update ddcutil to 1.2.2-1

--- a/ddcutil/PKGBUILD
+++ b/ddcutil/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Deon Spengler <deon@spengler.co.za>
 
 pkgname=ddcutil
-pkgver=1.1.0
+pkgver=1.2.2
 pkgrel=1
 pkgdesc='Query and change Linux monitor settings using DDC/CI and USB.'
 url='http://ddcutil.com/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
-depends=('glib2' 'libusb' 'libdrm' 'libxrandr')
+depends=('glib2' 'i2c-tools' 'libusb' 'libdrm' 'libxrandr')
 makedepends=('systemd')
 source=(https://github.com/rockowitz/ddcutil/archive/v$pkgver/$pkgname-$pkgver.tar.gz)
-sha512sums=('a6c07e12689a01fc716f071d87b42f680967390cb49f02501985f8362dd25176ac50cf4cf4a65e9a430d2088fab83cad19093c9078ae7d19b45fedc12f529607')
+sha512sums=('0329711e536cbcaee2efe6cf981a17181ab318846e9c6a82f2ceacc42691ba49c06df44a52d1f079568e9ccec588cc85d4de4adf19b6db83bebe4bb90ae29207')
 
 prepare() {
   cd $pkgname-$pkgver
