--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -3,11 +3,12 @@
 
 pkgbase=linux
 pkgver=5.17.arch1
-pkgrel=1
+pkgrel=1.1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://github.com/archlinux/linux/commits/$_srctag"
 arch=(powerpc64le powerpc)
+#arch=(powerpc)
 license=(GPL2)
 makedepends=(
   bc kmod libelf pahole
@@ -30,7 +31,7 @@ validpgpkeys=(
 )
 sha256sums=('SKIP'
             'dc3e1a034d41fbefdbb1f6002ea83a6d01a192fb99294c1d9bcb5b86c765b60d'
-            'c208096ddfdd55fa85518738a39420c1555ea19e642687e0eb2a4c5b36345f55'
+            '739630613c9c399e4ce89659e624738d253224bb96882f007aecda487e7e12ea'
             'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
@@ -206,3 +207,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 # vim:set ts=8 sts=2 sw=2 et:
+sha256sums=('SKIP'
+            'dc3e1a034d41fbefdbb1f6002ea83a6d01a192fb99294c1d9bcb5b86c765b60d'
+            '4facd450464418c8a124b277b3ea05505e673ab6ff89553b7ff951f8a0523479'
+            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
