* update vtk to 9.1.0-12

--- a/vtk/PKGBUILD
+++ b/vtk/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgname=vtk
 pkgver=9.1.0
-pkgrel=9
+pkgrel=12
 pkgdesc="Software system for 3D computer graphics, image processing, and visualization"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.vtk.org/"
@@ -64,10 +64,12 @@ optdepends_x86_64=(
 	'qt5-webkit: WebKit support'
 )
 source=(${url}/files/release/${pkgver%.*}/VTK-${pkgver}.tar.gz
-        vtk-tbb-2021.patch::https://gitlab.kitware.com/vtk/vtk-m/-/merge_requests/2509.patch)
+        vtkm-tbb-2021.patch::https://gitlab.kitware.com/vtk/vtk-m/-/merge_requests/2509.patch
+	vtk-ffmpeg5.patch::https://gitlab.kitware.com/vtk/vtk/-/merge_requests/8863.patch)
 options=(staticlibs)
 sha256sums=('8fed42f4f8f1eb8083107b68eaa9ad71da07110161a3116ad807f43e5ca5ce96'
-            '37cff664c4eaacf44ecb995e62e9e54e54880bae0857d598c74660a2159ccb2e')
+            '37cff664c4eaacf44ecb995e62e9e54e54880bae0857d598c74660a2159ccb2e'
+            '066ad5eb3f7cd101c4bbbe4d91ba97419f18537f9dadf6654776b7151c7c6a8d')
 
 prepare() {
   cd VTK-${pkgver}
@@ -76,7 +78,9 @@ prepare() {
   # We have a patched fmt
   sed -i "s|8.1.0|8.0.1|" ThirdParty/fmt/CMakeLists.txt
   # Fix build with TBB 2021
-  patch -d ThirdParty/vtkm/vtkvtkm/vtk-m -p1 -i "$srcdir"/vtk-tbb-2021.patch
+  patch -p1 -d ThirdParty/vtkm/vtkvtkm/vtk-m < ../vtkm-tbb-2021.patch
+  # Fix build with FFmpeg 5
+  patch -p1 < ../vtk-ffmpeg5.patch
 }
 
 build() {
@@ -127,7 +131,6 @@ build() {
     -DVTK_BUILD_ALL_MODULES=ON \
     -DVTK_INSTALL_TCL_DIR=/usr/lib/tcl${_tkver}/vtk/ \
     -DVTK_LEGACY_REMOVE=ON \
-    -DVTK_SMP_ENABLE_OPENMP=OFF \
     -DVTK_SMP_IMPLEMENTATION_TYPE=TBB \
     -DVTK_PYTHON_VERSION=3 \
     -DVTK_USE_MPI=ON \
