* update pkcs11-helper to 1.28.0-1

--- a/pkcs11-helper/PKGBUILD
+++ b/pkcs11-helper/PKGBUILD
@@ -5,19 +5,20 @@
 # Contributor: Martin Perner <martin dot perner at gmail dot com>
 
 pkgname=pkcs11-helper
-pkgver=1.26.0
-pkgrel=2
-pkgdesc="A library that simplifies the interaction with PKCS11 providers for end-user applications using a simple API and optional OpenSSL engine"
-arch=( x86_64 powerpc64le powerpc )
+pkgver=1.28.0
+pkgrel=1
+pkgdesc='A library that simplifies the interaction with PKCS11 providers for end-user applications using a simple API and optional OpenSSL engine'
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/OpenSC/pkcs11-helper'
 license=(GPL BSD)
 depends=('gnutls' 'nss' 'openssl')
 provides=('libpkcs11-helper.so')
-source=("https://github.com/OpenSC/${pkgname}/releases/download/${pkgname}-${pkgver%.0}/${pkgname}-${pkgver}.tar.bz2")
-sha256sums=('e886ec3ad17667a3694b11a71317c584839562f74b29c609d54c002973b387be')
+source=("https://github.com/OpenSC/${pkgname}/releases/download/${pkgname}-${pkgver}/${pkgname}-${pkgver}.tar.gz")
+sha256sums=('e9ba4820c4c340658fea2ccb1ed56a9b63d5bf700772b58e2f559eb24b2f6fcf')
 
 build() {
   cd pkcs11-helper-$pkgver
+
   libtoolize
   aclocal
   autoheader
@@ -29,8 +30,8 @@ build() {
 
 package() {
   cd pkcs11-helper-$pkgver
+
   make DESTDIR="$pkgdir" install
   mkdir -p "$pkgdir"/usr/share/licenses/$pkgname/
   install -D -m0644 COPYING* "$pkgdir"/usr/share/licenses/$pkgname/
 }
-
