* update linux to 5.17.arch1-2

--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=linux
 pkgver=5.17.arch1
-pkgrel=1.1
+pkgrel=2
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://github.com/archlinux/linux/commits/$_srctag"
@@ -22,6 +22,9 @@ source=(
   config         # the main kernel config file
   config.ppc32
   linux-powerpc-binutils-2.38.patch
+  ppc-radeon-qw-pm.patch
+  0002-v4-2-2-powerpc-Fix-virt_addr_valid-check.patch
+  0001-v4-1-2-Revert-powerpc-Set-max_mapnr-correctly.patch
 )
 validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
@@ -31,8 +34,11 @@ validpgpkeys=(
 )
 sha256sums=('SKIP'
             'dc3e1a034d41fbefdbb1f6002ea83a6d01a192fb99294c1d9bcb5b86c765b60d'
-            '739630613c9c399e4ce89659e624738d253224bb96882f007aecda487e7e12ea'
-            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
+            '4facd450464418c8a124b277b3ea05505e673ab6ff89553b7ff951f8a0523479'
+            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38'
+            '07dbbf3e8f743e8d2ad90891a8b567392271db139e339529df1ab4387e0e6400'
+            'fe9ab724dc8002cb5625e11b6dbddf1a5c4afb64eb79585a6228e131f20a3ae6'
+            '1876c10e772eab8cbc979d213e151afd84f49cc8c8091b855cf304aad4b4963e')
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
@@ -207,7 +213,3 @@ for _p in "${pkgname[@]}"; do
 done
 
 # vim:set ts=8 sts=2 sw=2 et:
-sha256sums=('SKIP'
-            'dc3e1a034d41fbefdbb1f6002ea83a6d01a192fb99294c1d9bcb5b86c765b60d'
-            '4facd450464418c8a124b277b3ea05505e673ab6ff89553b7ff951f8a0523479'
-            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
