* update networkmanager-openvpn to 1.8.18-1

--- a/networkmanager-openvpn/PKGBUILD
+++ b/networkmanager-openvpn/PKGBUILD
@@ -1,24 +1,24 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
+# Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 
 pkgname=networkmanager-openvpn
-pkgver=1.8.14
+pkgver=1.8.18
 pkgrel=1
 pkgdesc="NetworkManager VPN plugin for OpenVPN"
 url="https://wiki.gnome.org/Projects/NetworkManager"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
 depends=(libnm libsecret openvpn)
 makedepends=(libnma intltool python git)
 optdepends=('libnma: GUI support')
-_commit=e9f6f89a4a01621d21c9ed51aacde9b7ef05bd41  # tags/1.8.14^0
+_commit=428aa26bc05cac4cf418624128bb10c9d4003e5d  # tags/1.8.18^0
 source=("git+https://gitlab.gnome.org/GNOME/NetworkManager-openvpn.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd NetworkManager-openvpn
-  git describe --tags | sed 's/-dev/dev/;s/-/+/g'
+  git describe --tags | sed 's/-dev/dev/;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
