* update pigz to 2.7-1

--- a/pigz/PKGBUILD
+++ b/pigz/PKGBUILD
@@ -5,15 +5,15 @@
 # Contributor: Stefan Husmann <stefan-husmann@t-online.de>
 
 pkgname=pigz
-pkgver=2.6
+pkgver=2.7
 pkgrel=1
 pkgdesc='Parallel implementation of the gzip file compressor'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.zlib.net/pigz'
 license=('custom')
 depends=('zlib')
 source=(https://www.zlib.net/$pkgname/$pkgname-$pkgver.tar.gz)
-sha256sums=('2eed7b0d7449d1d70903f2a62cd6005d262eb3a8c9e98687bc8cbb5809db2a7d')
+md5sums=('2d084221ba829d29f344305845a313f3')
 
 build() {
   cd $pkgname-$pkgver
