* update nodejs to 17.7.2-1

--- a/nodejs/nodejs/PKGBUILD
+++ b/nodejs/nodejs/PKGBUILD
@@ -9,19 +9,19 @@
 # Contributor: TIanyi Cui <tianyicui@gmail.com>
 
 pkgname=nodejs
-pkgver=17.4.0
+pkgver=17.7.2
 pkgrel=1
 pkgdesc='Evented I/O for V8 javascript'
 arch=(x86_64 powerpc64le riscv64)
-arch=(riscv64)
 url='https://nodejs.org/'
 license=('MIT')
+options=(!lto)
 depends=('brotli' 'openssl' 'zlib' 'icu' 'libuv' 'libnghttp2' 'c-ares') # 'http-parser' 'v8')
 makedepends=('python' 'procps-ng')
+optdepends=('npm: nodejs package manager')
 provides=('npm')
-conflicts=('npm')
 source=("https://github.com/nodejs/node/archive/v$pkgver/nodejs-$pkgver.tar.gz")
-sha512sums=('4e66464a2ff64b6b2c75f7b3867977b66944e5fecc45695d0223245d58e7c46b2a384dead15f72c7ae3613f36645f75671824476f38e185d6b53c3ad8471d285')
+sha512sums=('083b29b20d20d7450b87ba282f865ee3b1a1b343ad18c4219b929b4df30267fd82035937cfcb098b0944cbe9c7ea58e471674f119449ccdccff294a9969e1ddd')
 
 build() {
   cd node-$pkgver
