* add polkit-qt to riscv64

--- a/polkit-qt/PKGBUILD
+++ b/polkit-qt/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=(polkit-qt5)
 pkgver=0.114.0
 pkgrel=1
 pkgdesc='A library that allows developers to access PolicyKit API with a nice Qt-style API'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.kde.org/'
 license=(LGPL)
 depends=(polkit qt5-base)
