* add libdbusmenu-qt5 to riscv64

--- a/libdbusmenu-qt5/PKGBUILD
+++ b/libdbusmenu-qt5/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=(libdbusmenu-qt5)
 pkgver=0.9.3+16.04.20160218
 pkgrel=5
 pkgdesc="A library that provides a Qt implementation of the DBusMenu spec"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://launchpad.net/libdbusmenu-qt"
 license=(GPL)
 makedepends=(cmake doxygen qt5-base)
