* update firefox to 98.0.2-1

--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=98.0.1
+pkgver=98.0.2
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le riscv64)
@@ -27,21 +27,29 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         firefox-powerpc-clang.patch
         big-endian-image-decoders.patch
         fix-image-format-warning.patch
-        ppc32-fix-build.patch
         flac-no-ffvpx.patch
         avoid-redefinition.patch
-        firefox-pgo.diff)
-sha256sums=('f8de2f514d94cad25a2c8a5d219399de5c05a907607d51c5c5235a8bc9bb361c'
+        firefox-pgo.diff
+        riscv.patch
+        ppc.patch
+        Skia-table-titles-fading.patch
+        Skia-menu-fonts.patch
+        Skia-ConvolutionFilter.patch)
+sha256sums=('c144b6016aaa8ceab8154b9f0b2bbeee6cbc22ab7f811fcece28d36e49565890'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
             'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
             'ad83c0c6195ab742848941be1d9c8f32c1d4a8bc019d8887b42256bafaefb541'
             '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
             '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
-            'cc24b6b95ff11ebf3bb29e0270f357169c7fff00c2a6f33e6c2b701096e7da9e'
             '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
             '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
-            '58f09287af2dd1dc2907a0dde68cc04d39f1eab448094322c3ffef6ba7878009')
+            '58f09287af2dd1dc2907a0dde68cc04d39f1eab448094322c3ffef6ba7878009'
+            'SKIP'
+            'cea57582d6cd7c34e99226bccafc87dbf7368186a5d76eb0836d4ddbce3bc81f'
+            '895129290e71efa359f547552f99259e7e1c3b042c47397e90407942c2f59f24'
+            'd2e5974942f161eb43b158968ad8ea3184a9c0527169d0af7ef5e9ac126be0f7'
+            'ad3799ee347923572aee6ca2934779b26a88cfc0db444208f4b8015b976b203c')
 validpgpkeys=('14F26682D0916CDD81E37B6D61B7B526D98F0353') # Mozilla Software Releases <release@mozilla.com>
 
 # Google API keys (see http://www.chromium.org/developers/how-tos/api-keys)
@@ -63,13 +71,22 @@ prepare() {
 
   patch -Np0 -i ${srcdir}/firefox-powerpc-clang.patch
 
-  # sourced from Voidlinux thanks!
+  # sourced from Voidlinux, thanks!
   patch -Np0 -i ${srcdir}/big-endian-image-decoders.patch
   patch -Np0 -i ${srcdir}/fix-image-format-warning.patch
-  patch -Np0 -i ${srcdir}/ppc32-fix-build.patch
   patch -Np0 -i ${srcdir}/flac-no-ffvpx.patch
   patch -Np0 -i ${srcdir}/avoid-redefinition.patch
+
+  # Talospace goodness
   patch -Np1 -i ${srcdir}/firefox-pgo.diff
+
+  # sourced from T2 SDE, thanks!
+  patch -Np1 -i ${srcdir}/riscv.patch
+  patch -Np1 -i ${srcdir}/ppc.patch
+  patch -Np1 -i ${srcdir}/Skia-table-titles-fading.patch
+  patch -Np1 -i ${srcdir}/Skia-menu-fonts.patch
+  patch -Np1 -i ${srcdir}/Skia-ConvolutionFilter.patch
+
 
   case "${CARCH}" in
     powerpc64le|riscv64)
