--- a/libaccounts-qt/PKGBUILD
+++ b/libaccounts-qt/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=libaccounts-qt
 pkgdesc='Qt-based client library for accessing the online accounts database'
 pkgver=1.16
 pkgrel=3
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.com/accounts-sso/libaccounts-qt'
 license=(LGPL)
 depends=(libaccounts-glib qt5-base)
