* update signon-ui to 0.17+20171022-3

--- a/signon-ui/PKGBUILD
+++ b/signon-ui/PKGBUILD
@@ -5,39 +5,52 @@
 
 pkgname=signon-ui
 pkgver=0.17+20171022
-pkgrel=2
+pkgrel=3
+_commit=4368bb77d9d1abc2978af514225ba4a42c29a646
 pkgdesc='UI component responsible for handling the user interactions which can happen during the login process of an online account'
-arch=( x86_64 powerpc64le powerpc )
-url="https://launchpad.net/online-accounts-signon-ui"
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='https://launchpad.net/online-accounts-signon-ui'
 license=(GPL)
 depends=(libaccounts-qt signond libnotify)
-if [ ! "${CARCH}" == 'powerpc' ]; then
-  depends+=(qt5-webengine)
- _commit=4368bb77d9d1abc2978af514225ba4a42c29a646
-else
-  depends+=(qt5-webkit)
-  _commit=79d6d672564012af31cf20f3515ffd64edc787a2
-fi
-source=($pkgname-$pkgver.tar.gz::"https://gitlab.com/accounts-sso/signon-ui/repository/archive.tar.gz?ref=$_commit")
-sha256sums=('335b1ce78fe4e2c27d318d818afc69fc9d9385751570448dfdead54f6be7ab04')
+depends_powerpc=(qt5-webkit)
+depends_riscv64=(qt5-webkit)
+depends_powerpc64le=(qt5-webengine)
+depends_x86_64=(qt5-webengine)
+
+# when no qt5-webengine is available revert to before it was mandated
+case "${CARCH}" in
+  powerpc|riscv64) _commit=79d6d672564012af31cf20f3515ffd64edc787a2 ;;
+esac
+
+source=("git+https://gitlab.com/accounts-sso/signon-ui.git#commit=${_commit}"
+        fake-user-agent.patch)
+sha256sums=('SKIP'
+            '5eb7782c6472e51a8107a25324d1d30052bac5d8e9050907cd957c89568fa577')
+options=(debug)
 
 prepare() {
-  mv signon-ui-$_commit-$_commit $pkgname-$pkgver
-  cd $pkgname-$pkgver
+  cd $pkgname
 
   # Do not install tests
   sed -e 's|src \\|src|' -e '/tests/d' -i signon-ui.pro
+
+  case "${CARCH}" in
+    powerpc64le|x86_64)
+      # Fake user ID to bypass Google blacklist
+      patch -p1 -i ../fake-user-agent.patch
+      ;;
+  esac
 }
 
 build() {
-  cd $pkgname-$pkgver
+  cd $pkgname
 
   qmake-qt5 PREFIX=/usr LIBDIR=/usr/lib
   make
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd $pkgname
 
   make INSTALL_ROOT="$pkgdir" install
 }
