* update KF5 to 5.92.0 and add to riscv64

--- a/kde/kdeclarative/PKGBUILD
+++ b/kde/kdeclarative/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdeclarative
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Provides integration of QML and KDE Frameworks'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kio kpackage libepoxy)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3e342a4735d40cdfaf3456afb6aac9eae22a827f77a6107f1cd50b7e8df4fffc'
+sha256sums=('fe964d77fea37c04eee3863d2b4227b76e33f16583906c284b532a461982d5b3'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
