--- a/kde/kfilemetadata/PKGBUILD
+++ b/kde/kfilemetadata/PKGBUILD
@@ -4,21 +4,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kfilemetadata
-pkgver=5.90.0
-pkgrel=1
+pkgver=5.92.0
+pkgrel=2
 pkgdesc='A library for extracting file metadata'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(ki18n karchive kconfig kcoreaddons exiv2 poppler-qt5 taglib ffmpeg ebook-tools)
-optdepends=('catdoc: Extract text from Office 98 files')
-makedepends=(extra-cmake-modules catdoc doxygen qt5-tools qt5-doc libappimage)
-optdepends=('libappimage: AppImage extractor')
+optdepends=('catdoc: Extract text from Office 98 files'
+            'kdegraphics-mobipocket: MOBI extractor'
+            'libappimage: AppImage extractor')
+makedepends=(extra-cmake-modules catdoc doxygen qt5-tools qt5-doc libappimage kdegraphics-mobipocket)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('5d7951e05ae9e6b9c3c271ddc38e9e73f6e1824268770b2a32aaa30f8d5dc4a3'
+sha256sums=('d624d3551094cf73d802b6e95bcd78577ce9eb1e9cbb9a8f340dcad066ea15ce'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
