--- a/kde/knotifications/PKGBUILD
+++ b/kde/knotifications/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=knotifications
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Abstraction for system notifications'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(libcanberra libdbusmenu-qt5 kwindowsystem kconfig kcoreaddons qt5-speech libxtst)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules qt5-tools qt5-doc doxygen qt5-declarative)
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f19d4a2a928da505d3d99cf66967017a8eb9488bbc356e6e23e8075fa01c0b97'
+sha256sums=('8c4e095e3d96140f19e9f2e2dbc74df174e29416455671fc6680828038ea94b7'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
