--- a/kde/attica/PKGBUILD
+++ b/kde/attica/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=attica
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='Qt library that implements the Open Collaboration Services API'
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
@@ -14,9 +14,10 @@ depends=(qt5-base)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('9372f1f1733c33bc36c3180b821bb1a12d1808735de86bce742aae043d3e437f'
+sha256sums=('bf647c7736acbbb99ff1557339f71b5efd5a7591b2af83b482d37d35516bc933'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
