--- a/kde/baloo/PKGBUILD
+++ b/kde/baloo/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=baloo
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='A framework for searching and managing metadata'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kfilemetadata kidletime kio lmdb)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules kdoctools doxygen qt5-tools qt5-doc qt5-declara
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a64483982a68160a9ce38326abce89d6e57b6b7e1907e4a2683b46df90f6ceda'
+sha256sums=('283570583da0f85b2001ca600b9657e3a3fb9c2dcdd3ea8728553e212e50a475'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
