--- a/kde/bluez-qt/PKGBUILD
+++ b/kde/bluez-qt/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=bluez-qt
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Qt wrapper for Bluez 5 DBus API'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(GPL2)
 depends=(qt5-base bluez)
@@ -13,9 +13,10 @@ makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e38770ada90cb66fcc891c89a020bc4d510a1dbd4025d257a8d895979b2dd114'
+sha256sums=('f58d2483ed2db9cb77621bce3b3c6babd8d1153954030c0dc52ce399c6d28ab6'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
