--- a/kde/kactivities-stats/PKGBUILD
+++ b/kde/kactivities-stats/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kactivities-stats
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='A library for accessing the usage data collected by the activities system'
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kactivities)
-makedepends=(extra-cmake-modules boost doxygen qt5-tools qt5-doc)
+makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('772f475b4513df9e96179a8bf8767a305cf6945a7d9b3d2faa96caf73af25561'
+sha256sums=('2206132e0edbb8271f77bb6c45e794b8d3baa3d9b4f94aba005556f9fa3ff751'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
