--- a/kde/kactivities/PKGBUILD
+++ b/kde/kactivities/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kactivities
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 pkgdesc='Core components for KDE Activities'
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules boost doxygen qt5-tools qt5-doc qt5-declarative
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('bc8071efa15946e63a52fa40cdf4077a02108257de76cc058ee2cb359cb5c771'
+sha256sums=('fc06b6fc111f5ed8450c1c1c96f36188328b2292001ca3bf3293d0f68678dbcd'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
