--- a/kde/kauth/PKGBUILD
+++ b/kde/kauth/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kauth
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Abstraction to system policy and authentication features'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcoreaddons polkit-qt5)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('23a45f68062432b65f4264f371e7f1753034dba3a86d5e44bf9fb1abf30d91bc'
+sha256sums=('44824bf68ee510d8aa0189a9d4b44568b0fe20d17ba45e3b739db1927bfa4728'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
