--- a/kde/kcalendarcore/PKGBUILD
+++ b/kde/kcalendarcore/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kcalendarcore
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='The KDE calendar access library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(libical qt5-base)
@@ -15,9 +15,10 @@ provides=(kcalcore)
 replaces=(kcalcore)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1ca94b91bbbc377be462bdf005392e187a6e5adb3ac2bc2fc7396da9bdd06d61'
+sha256sums=('6ff2e68dfb8b92e0f181f3f19d20991bfd589b4a047b313af908c41391560b3a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
