--- a/kde/kcmutils/PKGBUILD
+++ b/kde/kcmutils/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcmutils
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Utilities for interacting with KCModules'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kdeclarative)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b36300a5f400e082b800508292c2d6e5bdb033567cdc43c0dd947744e4c09911'
+sha256sums=('dd49e658fc85c215442a7fa9d2435819f0bef13c997a6c2a51557b82e1bc8d3a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
