--- a/kde/kcompletion/PKGBUILD
+++ b/kde/kcompletion/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcompletion
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Text completion helpers and widgets'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kwidgetsaddons kconfig)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f33dc0abeb3b6b5ca96d2e6ab5712e26ab7115152bde6a08fa85afd8a3b6a341'
+sha256sums=('08f1525c6cee8babe399c941bb85d04be9dade0341d1d85c6beccd2e93dc7ceb'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
