--- a/kde/kconfig/PKGBUILD
+++ b/kde/kconfig/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kconfig
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Configuration system'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules qt5-declarative qt5-tools qt5-doc clang doxygen
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('369bf21d3d7a894575728b0061875e4122de13935c0740733e0bc2df9b1f1a7b'
+sha256sums=('7801b641b88368a0c021272073c692337b42ee28f0025d106942c8ce873b0523'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
