--- a/kde/kconfigwidgets/PKGBUILD
+++ b/kde/kconfigwidgets/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kconfigwidgets
-pkgver=5.90.1
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Widgets for KConfig'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kauth kcodecs kconfig kguiaddons ki18n kwidgetsaddons)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules kdoctools clang doxygen qt5-tools qt5-doc)
 optdepends=('perl: for preparetips5')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('ba7f9169237b9146ce3e06b9f4a895d0ad5b822e3bb7f68448c453a5892571ae'
+sha256sums=('4259eed35d9ac307ecc30e64833bad7a89ef58fc7125054eb39716d27a4a274a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
