--- a/kde/kcontacts/PKGBUILD
+++ b/kde/kcontacts/PKGBUILD
@@ -3,19 +3,20 @@
 
 pkgname=kcontacts
 epoch=1
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Address book API for KDE'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
-depends=(kcoreaddons kconfig ki18n kcodecs iso-codes)
+depends=(kcoreaddons kconfig ki18n kcodecs)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3536d335136c5bef49538a47641f3469668e45976874211ba74615d5cc08626f'
+sha256sums=('1276006e50f507216a8241ca4b26b02c67c42e5bee26a6b391db6ae4f72533ce'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
