--- a/kde/kcoreaddons/PKGBUILD
+++ b/kde/kcoreaddons/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcoreaddons
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Addons to QtCore'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('6e168f1d719e4c388de324960d14b99963d42c74a21986f027c9b7093281a40a'
+sha256sums=('df5f718f324aa2b58191438c8aa5f7498a7997eff990d16ffbc9f19efd1a6667'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
