--- a/kde/kcrash/PKGBUILD
+++ b/kde/kcrash/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcrash
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Support for application crash analysis and bug report from apps'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcoreaddons kwindowsystem)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 optdepends=('drkonqi: KDE crash handler application')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8e002a52c48a5aaec72e85bcc30741b8b2493173030b3bca9e1de5bd3e966418'
+sha256sums=('9bc5605b5026f55d9c2c1ca32c79842c3ad0f5c042e480fe1e7027b2692526c7'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
