--- a/kde/kdav/PKGBUILD
+++ b/kde/kdav/PKGBUILD
@@ -2,20 +2,21 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kdav
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 epoch=1
 pkgdesc='A DAV protocol implemention with KJobs'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kio qt5-xmlpatterns)
 makedepends=(extra-cmake-modules doxygen qt5-tools)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('71bdde6d2a3361c949f7b39844c9035481c06d6c45925e15e5f5c58dbcca0105'
+sha256sums=('f3b16c473b104f83f6124f96f2b06a6c72a447eb19ba31a90e3f4725e732b1c4'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
