--- a/kde/kdbusaddons/PKGBUILD
+++ b/kde/kdbusaddons/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdbusaddons
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Addons to QtDBus'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-x11extras)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('44e99c247c053db796ac3752f546bcc759651206f178305854bc4757fd4ac03c'
+sha256sums=('7c03f33cc49ffa80e509f654f410cb142e917bceb2f35f08836dc46ed268ae54'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
