--- a/kde/kded/PKGBUILD
+++ b/kde/kded/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kded
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Extensible deamon for providing system level services'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kservice kcrash)
 makedepends=(extra-cmake-modules kdoctools)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('faea3349e15c9c671c33172020787cb2e76f7809231c9d15ebac347bd0358f24'
+sha256sums=('8335531b856cb361ab2e5b390b333eb3405bac4e2bc7c0305994704bd0540e6c'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
