--- a/kde/kdelibs4support/PKGBUILD
+++ b/kde/kdelibs4support/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdelibs4support
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Porting aid from KDELibs4'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kunitconversion kitemmodels kemoticons kparts perl)
 makedepends=(extra-cmake-modules kdoctools qt5-tools networkmanager perl-uri kdesignerplugin)
 groups=(kf5-aids)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/portingAids/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('49ccf1989eb66f06414b62aeca9c82e35c6906e5a66549d3f9d880b76408ac7f'
+sha256sums=('292e5e84ad8d7de90f0666b51f085a25b7a9faf521c58379d470d2994004ede0'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
