--- a/kde/kdesignerplugin/PKGBUILD
+++ b/kde/kdesignerplugin/PKGBUILD
@@ -3,19 +3,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdesignerplugin
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Integration of Frameworks widgets in Qt Designer/Creator'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kconfig kcoreaddons)
 makedepends=(extra-cmake-modules qt5-tools kdoctools)
 groups=(kf5-aids)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/portingAids/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('388a2e9a2be330c7e90101e4eb2ca30e1a66a76e236e65e56f4a42311cf2faa1'
+sha256sums=('066859b345da224f5edb601a5f448540330c9a286980b0c34169646c26a22a4e'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
