--- a/kde/kdesu/PKGBUILD
+++ b/kde/kdesu/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdesu
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Integration with su for elevated privileges'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
-depends=(kservice kpty)
+depends=(kpty kconfig)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('970707b7717d8a3c38687f40ff93809b3779e527d8a6ce5fe2df05c20e1613e1'
+sha256sums=('4687dc87a9ada0675801e0c575467bb5f7f7fe21b67ae2ffd1fed80736f95efa'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
