--- a/kde/kdewebkit/PKGBUILD
+++ b/kde/kdewebkit/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdewebkit
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='KDE Integration for QtWebKit'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-webkit kparts)
 makedepends=(extra-cmake-modules qt5-tools)
 groups=(kf5-aids)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/portingAids/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('a1ff583c84cbc2ef5569672ba04e7a75a9bedd913278dca81202512d7ca7b8a5'
+sha256sums=('4d0a773cad86a642cb90d9844757569f2e2e9d1e96ccf78f73bee885c908d1b6'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
