--- a/kde/kdoctools/PKGBUILD
+++ b/kde/kdoctools/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdoctools
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Documentation generation from docbook'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(karchive docbook-xsl)
 makedepends=(extra-cmake-modules perl-uri ki18n doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1a74ff1d5ac8c0639ff8a3430f5226480844119010605f911ed7a2ca684d4ad0'
+sha256sums=('86a3aeb8b91dec0e1cd81b646654ebd750a8aedfac9b4d53b9b0019a91720870'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
