--- a/kde/khtml/PKGBUILD
+++ b/kde/khtml/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=khtml
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='KHTML APIs'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(giflib kparts kjs phonon-qt5)
 makedepends=(extra-cmake-modules gperf)
 groups=(kf5-aids)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/portingAids/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4a5664c874676c191c0c2bb9debe4611ad224e00f8a2b46bc793c2467a1a28ae'
+sha256sums=('91a1d79ea382a25614810cd59f800f0a34c6e86c69ef6d0a08d2655f2a93171a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
