--- a/kde/ki18n/PKGBUILD
+++ b/kde/ki18n/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ki18n
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Advanced internationalization framework'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-declarative iso-codes)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules qt5-declarative clang doxygen qt5-tools qt5-doc
 optdepends=('python: to compile .ts files')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('dce136afa95e1f0b41c3bb52f53dda74b5fa46cc45bad51865dcb757e79a688e'
+sha256sums=('058032e8e9556f1dadcf0c2bd633da6cfc9673e966dd113388e2b8aee2395777'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
