--- a/kde/kiconthemes/PKGBUILD
+++ b/kde/kiconthemes/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kiconthemes
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Support for icon themes'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-svg kconfigwidgets kitemviews karchive)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 optdepends=('breeze-icons: fallback icon theme')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('33f4cb7b18150cc4e54f1e3e0338c40ee0617c25921d9154d0c2fbe03b897c70'
+sha256sums=('2128710ff8bf0a7bbb699fe3a45b231c6b4607ba3e3a3a5d03c25c809233cb23'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
