--- a/kde/kidletime/PKGBUILD
+++ b/kde/kidletime/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kidletime
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Monitoring user activity'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-x11extras libxss)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('785f37141e2918a86bef801b4579c7d6c6e8299881da506263346cacc0acfcf7'
+sha256sums=('e12f14229f7ee587becb5a693374045c460d38c55d61e21eefd78b8db39280d7'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
