--- a/kde/kinit/PKGBUILD
+++ b/kde/kinit/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kinit
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Process launcher to speed up launching KDE applications'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kio)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules kdoctools)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
 install=kinit.install
-sha256sums=('2a3858eeb80b044e884bdc77e110e7ecb34cdb91575c544a95502123a183c57c'
+sha256sums=('cb517912bf17d4b4f015cb1ab935eebadc52ece050f21b33fcb4e799b0c5f3ce'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
