--- a/kde/kio/PKGBUILD
+++ b/kde/kio/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kio
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Resource and network access abstraction'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(solid kjobwidgets kbookmarks libxslt kwallet ktextwidgets kded)
@@ -16,9 +16,10 @@ optdepends=('kio-extras: extra protocols support (sftp, fish and more)' 'kdoctoo
             'kio-fuse: to mount remote filesystems via FUSE')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3a1f2eb6453172ecb5b9936c6a5205306e9e729f19bec6bf12527eef8a214637'
+sha256sums=('d4433f9890f71afe3d7d268e978e0ade96f506a38e41f7d57ffe832d96d44cb3'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
