--- a/kde/kitemmodels/PKGBUILD
+++ b/kde/kitemmodels/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kitemmodels
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Models for Qt Model/View system'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules clang doxygen qt5-tools qt5-doc qt5-declarative
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f12ffc52148cc94715b038b5c6e210669192a877f4678ff8e56bea795ca4ff38'
+sha256sums=('e65c7f58d602b4b8160b34a3a841d1c7aac77695b73e53aa715765cf42a8e89b'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
