--- a/kde/kitemviews/PKGBUILD
+++ b/kde/kitemviews/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kitemviews
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Widget addons for Qt Model/View'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f757982856c62031313d724bc639319b9fc60b647b91aa8667b22bd577414283'
+sha256sums=('058b4d4228387558b03aceb0ed286cbbe89ea07bb6fed968beba0b51678886d6'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
