--- a/kde/kjobwidgets/PKGBUILD
+++ b/kde/kjobwidgets/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kjobwidgets
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Widgets for tracking KJob instances'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcoreaddons kwidgetsaddons qt5-x11extras)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0d65d194284d2d8097d16c7d031772d29886316985e3274db3b06b5a916163cb'
+sha256sums=('df24b96f77ddbd2f63a6c2a3c54c4e712ef11a63b93c0b02d949d85af2fb8526'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
