--- a/kde/kjsembed/PKGBUILD
+++ b/kde/kjsembed/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kjsembed
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Embedded JS'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-svg ki18n kjs)
 makedepends=(extra-cmake-modules qt5-tools kdoctools)
 groups=(kf5-aids)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/portingAids/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c466279c3e293035eb72902ae117c30a980e695a60cd2da79eb0acf0cfd3b979'
+sha256sums=('d7c26538a0b7ac804565840d61df2681ea4b729abb6ecfbfcae3c20536ca6035'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
