--- a/kde/knewstuff/PKGBUILD
+++ b/kde/knewstuff/PKGBUILD
@@ -4,20 +4,27 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=knewstuff
-pkgver=5.90.0
-pkgrel=1
+pkgver=5.92.0
+pkgrel=2
 pkgdesc='Support for downloading application assets from the network'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kio kpackage attica syndication)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
 optdepends=('kirigami2: QML components')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8f89ab148271822128ac7469de98f3e4ade2eb890361741f1177bc5ffeb96060'
-            'SKIP')
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
+        https://invent.kde.org/frameworks/knewstuff/-/commit/693a2ea3.patch)
+sha256sums=('4b14aee55d7701c72d05030fad508a5cb89fee34656d4d84c2d977a3c2a66c3f'
+            'SKIP'
+            '55ac02239b7b532e125407e6505d3005eee06f57e3c69b633be0472da7ed624e')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
+
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < 693a2ea3.patch # Fix GHNS in non-English locales
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
