--- a/kde/knotifyconfig/PKGBUILD
+++ b/kde/knotifyconfig/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=knotifyconfig
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Configuration system for KNotify'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kio)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('cc24c2dfdb2f2bea29aef8f56d5183a3caf73f5d3515ba3de9e9ab9335205ae3'
+sha256sums=('f7f452e3197886a2afdfaa5a2954d412eb0ae2bc47ce742902765c053239313a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
