--- a/kde/kpackage/PKGBUILD
+++ b/kde/kpackage/PKGBUILD
@@ -5,19 +5,20 @@
 # Contributor: Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>
 
 pkgname=kpackage
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Framework that lets applications manage user installable packages of non-binary assets'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(karchive ki18n kcoreaddons)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc kdoctools doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e08ff2a2d363d56a382dccf5253108df66d62ab6f1d50bb6d26014a4b94a2fe6'
+sha256sums=('361f75fb4e3dff46e6dab42d858488af58fd40f3af1f7a39881ea9240cd866ab'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
