--- a/kde/kpeople/PKGBUILD
+++ b/kde/kpeople/PKGBUILD
@@ -3,10 +3,10 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kpeople
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='A library that provides access to all contacts and the people who hold them'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcoreaddons ki18n kwidgetsaddons kitemviews)
@@ -14,9 +14,10 @@ makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('fc3938d53fe2badb91e8f93a34afaa50f40b3610062fb5901d36d955cc986298'
+sha256sums=('b313729131bfbdb0ffd24ded926a2c6604dd06a18bd612c2ead6aa886f29c571'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() { 
   cmake -B build -S $pkgname-$pkgver \
