--- a/kde/kquickcharts/PKGBUILD
+++ b/kde/kquickcharts/PKGBUILD
@@ -3,19 +3,20 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kquickcharts
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='A QtQuick plugin providing high-performance charts'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-quickcontrols2)
 makedepends=(extra-cmake-modules)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d115bc31f10ba8e86b2d68e759890ee2cfa141612d30df5370e60fb032dfc9ed'
+sha256sums=('1a430e2909b137466cf41c334a60ebc01e4cde82e71acbb167cd64d1f13e8678'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
