--- a/kde/kross/PKGBUILD
+++ b/kde/kross/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kross
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Multi-language application scripting'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kparts qt5-script)
 makedepends=(extra-cmake-modules kdoctools qt5-tools)
 groups=(kf5-aids)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/portingAids/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7f28cfd81e820ac102bc3a1710581d12f15bda93aa3a80d1c1779423078047bf'
+sha256sums=('129e2840eb1f33c95d50cde79a82f784cf735c3f1ae636f15dcf695c0b0c1ebf'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
