--- a/kde/krunner/PKGBUILD
+++ b/kde/krunner/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=krunner
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Framework for providing different actions given a string query'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 groups=(kf5)
 depends=(plasma-framework threadweaver)
 makedepends=(extra-cmake-modules kdoctools doxygen qt5-tools qt5-doc)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f16546d24f307e7ca79948af8ad4c1a2a9483bb717db8c7c439b1c5168d570e0'
+sha256sums=('3fc80c5d66359e4593115b58fcd055ca9cab8f23376123094e13c5d4bdc48fed'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
