--- a/kde/ktexteditor/PKGBUILD
+++ b/kde/ktexteditor/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ktexteditor
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Advanced embeddable text editor'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kparts syntax-highlighting editorconfig-core-c)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 optdepends=('git: git integration')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('56088115827ae406dcd383e3c3fdf408950f351887259e41965fe4b7929f2dbc'
+sha256sums=('bcd01c3ca07d02106de1c68156e568ded7686ca9557b30a04f7b4e24cf43fb8c'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
