--- a/kde/ktextwidgets/PKGBUILD
+++ b/kde/ktextwidgets/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ktextwidgets
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Advanced text editing widgets'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcompletion kconfigwidgets sonnet qt5-speech)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4ff6a600f5a48086edb4b056ad8482a1913dd1858729e606d70e1a08d52fe809'
+sha256sums=('fe867bf498a5170a9fba91dff652b68fa5cae2af8864dbe89a6e54638ff90b0c'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
