--- a/kde/kwallet/PKGBUILD
+++ b/kde/kwallet/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwallet
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Secure and unified container for user passwords'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(knotifications kiconthemes kservice gpgme)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules kdoctools boost doxygen qt5-tools qt5-doc)
 optdepends=('kwalletmanager: Configuration GUI')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('74aa1144a358a1a43a133dabf1b0936ae01dc290e585573dec88e52d097ace19'
+sha256sums=('71aca76cb0edbf569827709b073bff2edb5c129a85638df4bc666d70786740e5'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
