--- a/kde/kwayland/PKGBUILD
+++ b/kde/kwayland/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwayland
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Qt-style Client and Server library wrapper for the Wayland libraries'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.kde.org'
 license=(LGPL)
 depends=(qt5-wayland)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc wayland-protocols plasma-wayland-protocols)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1163e049c4b1099d75999913f6d14f62423962bb4d938764420897647a26ee58'
+sha256sums=('95e097cefbe4e260129d77ab9fe3013818b85b9aee6e4744acfa1ada96fed195'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
