--- a/kde/modemmanager-qt/PKGBUILD
+++ b/kde/modemmanager-qt/PKGBUILD
@@ -3,19 +3,20 @@
 # Mainrainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=modemmanager-qt
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Qt wrapper for ModemManager DBus API'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(modemmanager qt5-base)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('09987b2625de29626de27c30e4b589f3962596b80f1114afce836e4ecbdbd422'
+sha256sums=('7ed0b4f48a781fa9166e0446ac14fc21036195cb3d800ce21a546cac02fe5898'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
