--- a/kde/networkmanager-qt/PKGBUILD
+++ b/kde/networkmanager-qt/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=networkmanager-qt
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Qt wrapper for NetworkManager API'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(networkmanager qt5-base)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4769cf118cada3a3adb815da976ecb1aaf466d6504c7667f1034aeb97ade3c45'
+sha256sums=('51ddc8ec0ea60c87c49d5a6709eed86fe1e066d57d059a7f9e774c97b81bfa64'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
