--- a/kde/plasma-framework/PKGBUILD
+++ b/kde/plasma-framework/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=plasma-framework
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Plasma library and runtime components based upon KF5 and Qt5'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kactivities kdeclarative kwayland kirigami2)
 makedepends=(extra-cmake-modules qt5-tools qt5-doc kdoctools doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e192af9e51fb181eb7feb2e51b51e6056fab370d16ca0c629c25a0b5b99558d7'
+sha256sums=('c6c2bc624564c74fd80bce170a1c763803d5207ef86108b5724fcba73c3506f7'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
