--- a/kde/plasma-wayland-protocols/PKGBUILD
+++ b/kde/plasma-wayland-protocols/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=plasma-wayland-protocols
 pkgver=1.6.0
 pkgrel=1
 pkgdesc='Plasma Specific Protocols for Wayland'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop'
 license=(LGPL)
 depends=()
