--- a/kde/purpose/PKGBUILD
+++ b/kde/purpose/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=purpose
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Framework for providing abstractions to get the developers purposes fulfilled'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kaccounts-integration kirigami2 accounts-qml-module)
@@ -16,9 +16,10 @@ optdepends=('kdeconnect: sharing to smartphone via KDE Connect'
             'prison: QR code plugin')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('810ae4e77d0206649a3f56cf69e6c76b867a7c774d3dc7cf0cbed521a14941a0'
+sha256sums=('94613e180550f9d15443ced1f2d93b566350d9a981205b4f98923714dc4f400a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
