--- a/kde/signon-kwallet-extension/PKGBUILD
+++ b/kde/signon-kwallet-extension/PKGBUILD
@@ -3,21 +3,22 @@
 # Contributor: anex <assassin.anex[@]gmail.com
 
 pkgname=signon-kwallet-extension
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KWallet integration for signon framework'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.kde.org'
 license=(LGPL)
 groups=(kde-applications kde-network)
 depends=(signond kwallet)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('b3f7e76e230dee1785a3e54ab37ff4e5860167b6d0a2c339f553dbc867884226'
+sha256sums=('7579e0434114c33eb5fea3f232bbd414658e2715f3f3a3a220a4f5be4079606b'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
