--- a/kde/solid/PKGBUILD
+++ b/kde/solid/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=solid
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Hardware integration and detection'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base media-player-info upower udisks2)
@@ -15,9 +15,10 @@ makedepends=(extra-cmake-modules qt5-tools qt5-doc doxygen qt5-declarative)
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3782bee19dff9e24e60782a8a2f297b1049bd50eaac3a2e389b0194160251382'
+sha256sums=('8926c859af4b6b14e0967fc3b76ca0e76de27d0ab544087eefdffe40518b5a9c'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
