--- a/kde/sonnet/PKGBUILD
+++ b/kde/sonnet/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=sonnet
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Spelling framework for Qt5'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
@@ -17,9 +17,10 @@ optdepends=('hunspell: spell checking via hunspell' 'aspell: spell checking via 
             'qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c7a772aec93c00fcd714b93b0596d2e918cb60f4e0937d7d152c07be53ed9d34'
+sha256sums=('31fc1dda3db582337529922d38b6eac72b1551c4a0d86fb9307363e061d05722'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
