--- a/kde/syndication/PKGBUILD
+++ b/kde/syndication/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=syndication
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='RSS/Atom parser library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcodecs)
@@ -15,9 +15,10 @@ conflicts=(kde-syndication)
 provides=(kde-syndication)
 replaces=(kde-syndication)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('bdfe30c05bbdd8e10903fe69a37cf859f25984edae16283fdd5c0ac207213229'
+sha256sums=('1c9ab9772103c001e56afbe0356ede04f953b07be8d2c2e2f2fff3e7b5bd5d46'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
