--- a/kde/syntax-highlighting/PKGBUILD
+++ b/kde/syntax-highlighting/PKGBUILD
@@ -3,10 +3,10 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=syntax-highlighting
-pkgver=5.90.0
+pkgver=5.92.0
 pkgrel=1
 pkgdesc='Syntax highlighting engine for structured text and code'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(GPL2)
 depends=(qt5-base)
@@ -14,9 +14,10 @@ makedepends=(extra-cmake-modules qt5-declarative qt5-xmlpatterns qt5-tools qt5-d
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('bf483e79c731a88ef642c9551ee092c4201d926af5b172bc11b1acde5c9baca6'
+sha256sums=('99347eaf9b2249f875cacd8319c77f2f8e110d0e7834f51f296ed911dcc7e50e'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
