* update packagekit-qt5 to 1.0.2-1.1

--- a/packagekit-qt5/PKGBUILD
+++ b/packagekit-qt5/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=packagekit-qt5
 pkgver=1.0.2
-pkgrel=1
+pkgrel=1.1
 pkgdesc='Qt5 bindings for PackageKit'
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://www.packagekit.org/'
 license=('LGPL')
 depends=('packagekit' 'qt5-base')
