* update geoclue2 to 2.5.2-3.1

--- a/geoclue2/PKGBUILD
+++ b/geoclue2/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=geoclue2
 pkgver=2.5.2
-pkgrel=3
+pkgrel=3.1
 pkgdesc="Modular geoinformation service built on the D-Bus messaging system"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/GeoClue/"
 license=(LGPL)
 depends=(libsoup json-glib libmm-glib avahi geocode-glib)
