* update glib2 to 2.72.0-1.1

--- a/glib2/PKGBUILD
+++ b/glib2/PKGBUILD
@@ -5,14 +5,14 @@
 pkgbase=glib2
 pkgname=(glib2 glib2-docs)
 pkgver=2.72.0
-pkgrel=1
+pkgrel=1.1
 pkgdesc="Low level core library"
 url="https://wiki.gnome.org/Projects/GLib"
 license=(LGPL)
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=(pcre libffi util-linux-libs zlib libsysprof-capture)
 makedepends=(gettext gtk-doc shared-mime-info python libelf git util-linux
-             meson dbus)
+             meson )
 checkdepends=(desktop-file-utils)
 options=(debug)
 source=("git+https://gitlab.gnome.org/GNOME/glib.git?signed#tag=$pkgver"
@@ -52,7 +52,8 @@ package_glib2() {
   provides+=(libgio-2.0.so libglib-2.0.so libgmodule-2.0.so libgobject-2.0.so
              libgthread-2.0.so)
   optdepends=('python: gdbus-codegen, glib-genmarshal, glib-mkenums, gtester-report'
-              'libelf: gresource inspection tool')
+              'libelf: gresource inspection tool'
+              'gvfs: most gio functionality')
 
   meson install -C build --destdir "$pkgdir"
 
