* update git to 2.35.1-1.1

--- a/git/PKGBUILD
+++ b/git/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=git
 pkgver=2.35.1
-pkgrel=1
+pkgrel=1.1
 pkgdesc='the fast distributed version control system'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://git-scm.com/'
@@ -44,6 +44,8 @@ _make_paths=(
 )
 
 _make_options=(
+  CC=${CHOST}-gcc
+  CXX=${CHOST}-g++
   CFLAGS="$CFLAGS"
   LDFLAGS="$LDFLAGS"
   INSTALL_SYMLINKS=1
