* update discover to 5.24.4-1

--- a/kde/discover/PKGBUILD
+++ b/kde/discover/PKGBUILD
@@ -1,10 +1,11 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Antonio Rojas <arojas@archlinux.org> 
 
 pkgname=discover
-pkgver=5.23.5
+pkgver=5.24.4
 pkgrel=1
 pkgdesc='KDE and Plasma resources management GUI'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(knewstuff kitemmodels kcmutils kidletime qt5-graphicaleffects appstream-qt archlinux-appstream-data
@@ -14,13 +15,14 @@ makedepends_x86_64=(fwupd)
 optdepends=('packagekit-qt5: to manage packages from Arch Linux repositories' 'flatpak: Flatpak packages support'
             'fwupd: firmware update support')
 groups=(plasma)
-source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f92397fe32b607a507a4b3a8ee52f37358ea75b1a9b3c1bca0f54dc1af3cf7cf'
+source=(https://download.kde.org/stable/plasma/${pkgver}/$pkgname-$pkgver.tar.xz{,.sig})
+sha256sums=('29291e0b2d2208991a0d4f4521304336016c1d1b605622a3807243168af6b06a'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
