* update kdecoration to 5.24.4-1

--- a/kde/kdecoration/PKGBUILD
+++ b/kde/kdecoration/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=kdecoration
 pkgver=5.24.4
 pkgrel=1
 pkgdesc='Plugin based library to create window decorations'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL)
 depends=(ki18n kcoreaddons)
