* add convertlit for riscv64

--- a/convertlit/PKGBUILD
+++ b/convertlit/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=convertlit
 pkgver=1.8
 pkgrel=10
 pkgdesc="An extractor/converter for .LIT eBooks"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpcriscv64)
 url="http://www.convertlit.com/"
 license=('GPL')
 depends=(libtommath)
