* add catdocs for riscv64

--- a/catdoc/PKGBUILD
+++ b/catdoc/PKGBUILD
@@ -6,8 +6,9 @@ pkgname=catdoc
 pkgver=0.95
 pkgrel=3
 pkgdesc="A convertor for Microsoft Word, Excel, PowerPoint and RTF Files to text"
-arch=( x86_64 powerpc64le powerpc )
-url="http://www.wagner.pp.ru/~vitus/software/catdoc/"
+arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
+url="https://www.wagner.pp.ru/~vitus/software/catdoc/"
 license=('GPL')
 depends=('glibc')
 optdepends=('tk: for using wordview')
